--- a/mind.org
+++ b/mind.org
@@ -980,6 +980,14 @@
   - 审查中央和地方预算草案及中央和地方执行情况的报告
   - 审查和批准中央预算和中央预算执行情况的报告
   - 改变或者撤销全人常关于预算、决算不适当的决议
+  - 审查和批准国民经济和社会发展计划以及计划执行情况的报告
+  - 批准省、自治区和直辖市的建置
+  - 决定特别行政区的设立及其制度
+  - 决定战争与和平的问题
++ 最高监督权
+**** 全人常
+***** 性质
+全人大的常设机关
 
 * 军地常识
 * 计算机
