--- a/mind.org
+++ b/mind.org
@@ -989,6 +989,15 @@
 ***** 性质
 全人大的常设机关
 ***** 组成和任期
++ 组成
+  - 委员长
+  - 副委员长若干
+  - 秘书长
+  - 委员若干人
++ 组成人员中应当有适当名额的少数民族代表
++ 组成人员不得担任国家行政、监察、审判和检察机关的职务
++ 任期同全国人大任期相同
++ 委员长、副委员长连续任职不得超过两届
 
 * 军地常识
 * 计算机
