--- a/mind.org
+++ b/mind.org
@@ -123,7 +123,7 @@
    - 社会历史条件 :: 资本主义经济的高度发展和资本主义社会基本矛盾的充分暴露
 + 其他
   经济危机产生的原因之一就是资本主义社会基本矛盾
-**** 实战知识点 :note:
+**** 实战易错点      :note:
 1. 哲学 *不是* 科学的世界观和方法论，马克思主义哲学才是
 ** 唯物论
 + 两个对子
@@ -998,7 +998,246 @@
 + 组成人员不得担任国家行政、监察、审判和检察机关的职务
 + 任期同全国人大任期相同
 + 委员长、副委员长连续任职不得超过两届
+***** 重要职权
+- 立法权。制定和修改除全国人大制定的法律以外的法律
+- *解释宪法、监督宪法的实施*
+- 法律解释权。可以解释自己和人大制定的法律
+- 规范性文件的审查、监督权
+- 预算管理权 :: 人大闭会期间，审查和批准国民经济和社会发展计划、国家预算在执行过程中所必须作的 *部分调整方案*
+- 重大事务的决定权
+  决定特赦
+  决定全国或个别省、自治区、直辖市进入 *紧急状态*
+  决定驻外全权代表的任免
+  决定全国总动员或者局部动员
+  决定批准或者废除同外国缔结的条约和重要协定
+- 监督国家机关的工作。
+**** 国家主席
+***** 任职资格和任期
+- 任职资格 :: 有选举权和被选举权的 *年满四十五周岁* 的公民可以当选为国家主席、副主席
+- 任期 :: 同全国人大相同
+***** 重要职权
+- 公布法律、发布命令
+- 任免国务院组成人员和驻外全权代表
+- 外交权
+- 荣典权
+**** 国务院
+***** 性质
+最高权力机关的执行机关，是国家最高行政机关
+***** 组成和任期
++ 组成
+  - 总理
+  - 副总理若干
+  - 国务委员若干
+  - 各部部长
+  - 各委员会主任
+  - 审计长
+  - 秘书长
++ 任期
+  - 与人大任期相同
+  - 总理、副总理、国务委员连续任职不得超过两届
+***** 重要职权
+- 立法权
+- 对国防、民政、文教、经济、生态文明建设等各项工作的领导权和管理权
+- 对外事务的管理权
+- 重大事项的决定权
+  批准省、自治区、直辖市的区域划分
+  批准自治州、县、自治县、市的建置和区域划分
+  依法决定省、自治区、直辖市的范围内部分地区进入紧急状态
+**** 实战易错点 :note:
+1. 国家最高权力机关－－－全国人大
+2. 国家最高行政机关、最高权力机关的执行机关－－－国务院
+3. 修改宪法的机关－－－全国人大
+4. 宪法和法律的解释权－－－全人常
+5. 国家主席是一个独立的国家机关
+*** 监察机关
+**** 性质和地位
+- 最高监察机关 ---- 国家监察委员会
+- 国家监察机关 ---- 各级监察委员会
+**** 组成
+***** 组织系统
+- 中央设监察委员会
+- 省、自治区、直辖市、自治州、县、自治县、市、市辖区设监察委员会
+- 国家监察委对全国人大和全国人常负责
+- 地方监察委对产生他的国家权力机关和上一级监察委员会负责
+- 国家监察委 *领导* 地方各级监察委的工作，上级监察委 *领导*下级监察委的工作
+***** 组成人员
++ 组成
+  - 主任
+  - 副主任若干人
+  - 委员若干人
++ 任期
+  - 与全国人大任期相同
+  - 主任连续任职不得超过两届
+**** 监察权的行使
+- 依照法律规定 *独立行使监察权* ，不受行政机关、社会团体和个人的干涉
+- 办理职务违法和职务犯罪案件，应当与 *审判机关、检察机关、执法部门* 相互配合相互制约
+*** 人民法院和人民检察院
+**** 法院
+***** 性质和地位
+- 性质 :: 国家审判机关
+- 依法独立行使审判权，不受行政机关、社会团体和个人的干涉 
+***** 组织系统
+- 最高人民法院、地方各级人民法院和军事法院等专门人民法院
+- 地方各级人民法院分为：高院、中院和基层法院
+- 上下级之间是监督关系
+- 院长由同级人大选举，任期与同级人大任期相同
+- 最高院院长连续任职不得超过两届
+**** 检察院
+***** 性质、地位
+- 性质 :: 国家法律监督机关
+- 依法独立行使检察权
+***** 组织系统
+- 最高人民检察院、地方各级检察院、军事检察院
+- 检察院是双重领导制
+- 最高检察院对全国人大及全国人常负责，领导地方各级检察院和专门检察院
+- 地方各级对产生它的权力机关和上级检察院负责，并接受上级检察院的领导
+***** 组成与任期
++ 组成
+  - 检察长
+  - 副检察长
+  - 检察员
++ 最高检检察长任期不超过两届
+** 行政法与行政诉讼法
+*** 行政法概述
+**** 定义
+行政法是指调整行政关系、规范和控制行政权的法律规范系统
+**** 基本原则
+***** 合法行政原则
+1. 法律优先（法已规定不可违）
+2. 法律保留（法无规定不可为）
+***** 合理行政原则
+1. 公平公正原则
+2. 考虑相关因素
+3. 比例原则（合目的性、适当性、损害最小）
+***** 程序正当原则
+1. 行政公开原则
+2. 公众参与原则
+3. 回避原则
+***** 高效便民原则
+1. 行政效率原则（积极履行法定职责、遵守法定时限）
+2. 便利当事人原则
+***** 诚实守信原则
+1. 行政信息真实原则
+2. 保护公民信赖利益原则
+***** 权责统一原则
+1. 行政效能原则（赋予执法手段，保证政令有效）
+2. 行政责任原则
+**** 行政法律关系
+***** 定义
+行政法律关系是指行政法在调整行政关系过程中形成的当事人之间的法律上的权利和义务关系
+***** 行政法律关系主体
+****** 行政主体
++ 定义 :: 能够以自己的名义实施国家行政管理职能并承受一定法律后果的国家行政机关和社会组织
+******* 行政机关
++ 中央行政机关 :: 国务院及其各部门
++ 地方行政机关 :: 各级政府；民族自治地方行政机关；特别行政区行政机关；派出机关和派出机构
+  - 派出机关 :: 政府设立，执行各项行政事务
+    行政公署、区公所、街道办
+  - 派出机构 :: 政府职能部门设立，管理某一方面行政事务
+    派出所、税务所等
+******* 实施行政职能的非政府组织
+- 法律法规授权的组织
+  属于行政主体，如国有事业单位和企业单位
+- 行政机关委托的组织
+  不能以自己的名义实施行政管理和对外承担法律后果，不是行政主体，如税收代扣代缴人
+****** 行政相对人
++ 定义 :: 处于被管理和被支配地位的机关、组织和个人
+  - 公民
+  - 法人
+  - 其他组织
+  - 外国组织和个人
+***** 行政法律关系的内容
+行政法律关系主体 *所享有的权利和所承担的义务的总和*
+***** 行政法律关系的客体
+行政法律关系主体的 *权利义务所指向的对象* ，包括 *人身、行为和财物* 等事项
 
+**** 实战易错点 :note:
+1. 行政法 *首要基本原则* 是 *合法行政* 原则
+2. 合理行政是合法行政的必要补充和合理延伸
+3. 行政主体“三有” ---- 有权（行政职权）、有名（以自己名义）、有责（承担行政责任）
+4. 村委会、居委会不属于行政机关，我国最基层人民政府是乡（镇）政府
+
+*** 公务员制度
+**** 概念
+依法履行公职、纳入国家行政编制、由国家财政负担工资福利的工作人员
+**** 公职的取得
+***** 录用制度
++ 办法 :: 公开考试、严格考察、平等竞争、择优录取
++ 试用期 :: 1年，期满合格的，予以任职；不合格的，取消录用
++ 不得录用
+  - 刑事犯罪记录
+  - 开除党籍
+  - 开除公职
+  - 失信联合惩戒对象
+  - 其他规定
+***** 任用制度
++ 委任制
++ 选任制 :: 适用于领导职务
++ 聘任制 :: 专业性较强的职位和辅助性职位；涉及国家秘密的职位不实行
+**** 奖惩制度
+***** 奖励
+****** 原则
+- 定期奖励与及时奖励相结合
+- 精神奖励与物质奖励相结合
+- 以精神奖励为主
+****** 种类
+- 嘉奖
+- 记功（分三等）
+- 授予称号
+***** 处分
+****** 种类
+- 警告
+- 记过
+- 记大过
+- 降级
+- 撤职
+- 开除
+****** 后果
+- 受处分期间不得晋升职务、职级、级别
+- 除警告外不得晋升工资档次
+**** 回避制度
+***** 任职回避
+- 夫妻关系、直系血亲关系、三代以内旁系血亲和近姻亲关系的
+- 不得在同一机关担任双方直接隶属于同一领导人员的职务，或直接上下级领导关系的职务
+- 不得在其中一方担任领导职务的机关从事 *组织、人事、纪检、监察、审计和财务* 工作
+***** 地域回避
+- 担任乡级机关、县级机关、设区的市级机关及其有关部门 *主要领导职务* 的，应当实行地域回避
+**** 禁止性纪律
+***** 在职禁止
+- 不得违反规定从事和参与营利性活动
+- 不得在企业或者其他营利性组织中兼任职务
+- 因工作需要在机关外兼职，应报有关机关批准，并不得领取兼职报酬
+***** 离职禁止
+- 对象 :: 辞去公职或者退休的公务员，不包括开除、辞退、取消录用的公务员
+- 期限 :: 领导成员、县处级以上领导职务为3年内，其他公务员为2年内
+- 禁止事项 :: 不得与原工作业务直接相关的企业或其他营利性组织任职，不得从事与原工作业务直接相关的营利性活动
+**** 公职的退出
+***** 辞职
++ 不得辞去公职的情形
+  - 未满国家规定的最低服务年限的
+  - 涉密特殊岗位任职或未满脱密期的
+  - 重要公务尚未处理完毕，且须由本人继续处理的
+  - 正在接受审计、纪律调查、监察调查，或者涉嫌犯罪、司法程序未终结的
+  - 其他情形
+***** 辞退
++ 予以辞退
+  - 连续两年年度考核不称职的
+  - 不胜任现职又不接受其他安排的
+  - 改革需要，拒绝合理安排的
+  - 不履行公务员义务，不遵守法律和公务员纪律，经教育无转变，不适合在机关继续工作，又不宜给予开除处分的
+  - 无正当理由旷工连续超过十五天，或一年内累积超过30天
++ 不得辞退
+  - 因公致残，被确认丧失劳动能力或部分丧失劳动能力的
+  - 患病或负伤，在医疗期内
+  - 孕期、产假、哺乳期内
+  - 其他情形
+***** 退休
+国家规定的退休年龄或者完全丧失劳动能力
+**** 实战易错点 :note:
+1. 公务员一定是从事公务的人，但从事公务的人不一定是公务员
+2. 辞去领导职务不等于辞去公职；辞去领导职务依然保留公务员身份
+3. *依法履行公职、纳入国家行政编制、由国家财政负担工资福利* 是判断公务员的基本标准，缺一不可
+4. 公务员在 *警告处分* 期间可以晋升工资档次
 * 军地常识
 * 计算机
 * 公文写作与处理
