--- a/mind.org
+++ b/mind.org
@@ -1,3 +1,4 @@
+#+OPTIONS: toc:t ^nil author:zeamonk num:8
 * 习思想
 * 马克思主义哲学
 + 组成
@@ -1238,6 +1239,252 @@
 2. 辞去领导职务不等于辞去公职；辞去领导职务依然保留公务员身份
 3. *依法履行公职、纳入国家行政编制、由国家财政负担工资福利* 是判断公务员的基本标准，缺一不可
 4. 公务员在 *警告处分* 期间可以晋升工资档次
+*** 行政行为概述
+**** 概念
+行政主体为规制行政关系，行使职权，具有行政法意义的行为
+**** 分类
+***** 行政法律行为
+****** 双方行政行为
+行政协议
+****** 单方行政行为
+******* 抽象行政行为
+国家行政机关制定行政法规、规章和有普遍约束力的决定、命令等行政规则的职权行为
+- 行政立法
+- 制定规范性文件
+******* 具体行政行为
+国家行政机关依法就特定事项对特定公民、法人和其他组织的权利义务做出的单方行政职权行为
+- 征收、征用、许可、确认、处罚、强制等等
+**** 常见行政行为种类
+***** 行政征收
+行政机关和法定授权的组织依法向公民、法人和其他组织 *有偿或无偿收取一定财物* 的行政行为
+- 税的征收
+- 费的征收
+- 土地征收
+- 企业征收
+- 其他财产权的征收
+***** 行政征用
+行政主体出于国家和社会公共利益的需要，依法强制性取得行政相对人 *财产使用权或劳务* ，并给予合理 *经济补偿* 的行为
+- 土地征用
+- 劳务征用
+- 房屋设备交通运输工具等财产的征用
+***** 行政确认
+行政主体依法对行政相对人的法律地位、法律关系或者有关法律事实进行甄别，给予 *确定、认可、证明（或证伪）* ，并予以宣告的行政行为
+***** 行政给付
+行政物质帮助，行政主体对老、病、残或在其他特定情况下，依法向符合条件的申请人提供物质利益或者赋予其与物质利益有关的权益的行政行为
+- 给付抚恤金
+- 特定人员离退休金
+- 社会经济、福利金
+- 自然灾害救济金及救济物资
+***** 行政协议（行政合同）
+行政机关为了实现 *行政管理或者公共服务目标* ，与公民、法人和其他组织 *协商订立* 的具有 *行政法上权利义务* 内容的协议
+- 政府特许经营协议
+- 土地房屋等征收征用补偿协议
+- 矿产权等国有自然资源使用权出让协议
+- 政府投资的保障性住房的租赁、买卖等协议
+- 部分政府与社会资本合作协议
+***** 实战易错点 :note:
+1. 行政行为是行政主体及其外部工作人员的行为，不包括行政相对人的行为
+2. 具体行政行为具有 *特定性、外部性、可诉性*
+3. 行政合同是双方行政行为，但是 *主体* 具有 *不平等性*
+*** 行政许可
+**** 概念
+行政机关根据公民、法人或者其他组织的 *申请* ，经依法审查，准予其从事特定活动的行为
+**** 信赖保护原则
+- 行政机关不得擅自改变已经生效的行政许可
+- 行政许可所依据的法律等修改或废止，或者准予行政许可的客观情况已经发生重大改变，为公共利益的需要，行政机关可以依法变更或撤销已经生效的许可
+- 由此造成财产损失的，行政机关应当给予补偿
+**** 种类
+***** 一般许可（普通许可）
+没有数量限制
+- 集会
+- 游行示威
+- 出入境许可
+- 机动车驾驶许可
+***** 特许
+特定行业的市场准入，需要赋予特定权利的事项。用于分配稀缺资源，有数量限制
+- 航线使用许可
+- 电信业务经许可
+***** 认可
+需要认定具备特殊信誉、特殊条件或者特殊技能等资格、资质的事项，一般需要通过考试或考评
+- 律师资格
+- 医师执照
+***** 核准
+需要按照技术标准、技术规范，通过检验、检测、检疫等方式进行审定的事项
+- 生猪屠宰检疫
+- 电梯和观光索道安装运营许可
+***** 登记
+企业和其他组织的设立，需要确立主体资格的事项
+- 企业法人登记
+- 社团登记
+**** 许可实施的一般程序
+***** 申请
+可以通过信函、电报、电传、传真、电子数据交换和电子邮件等方式提出
+***** 决定
+1. 除当场可以决定的外，行政机关应当在申请之日起20日内做出是否准予许可的决定（有规定长于20日的，应当按20日的规定执行）
+2. 采取联合办理、集中办理或者统一办理的，办理时间不得超过45日；45日内不能办结的，经本级人民政府批准，可延长15日，并应将理由告知申请人
+3. 由下级审查后报上级决定的，下级机关应当在20日内审查完毕，法律另有规定的，依照其规定执行
+4. 做出准予行政许可的决定后，应当在做出决定之日起10日内向申请人颁发、送达行政许可证证件
+5. 时间以工作日计算，不含法定节假日
+**** 行政许可的听政
+***** 启动
+- 依职权
+- 依申请
+***** 通知
+- 举行听政7日前
+- 通知申请人、利害关系人
+***** 方式
+- 公开听证
+***** 过程
+- 案外人主持
+- 申辩、质证
+- 制作笔录（案卷排他）
+- 申请人、利害关系人不承担费用
+**** 行政许可的撤销
+***** 可以撤销行政许可的情形
+****** 许可机关违法
+- 滥用职权、玩忽职守
+- 超越职权
+- 违反法定程序
+- 申请人不符合条件
+***** 应当撤销行政许可的情形
+- 被许可人以欺骗、贿赂等不正当手段取得行政许可
+**** 实战易错点 :note:
+1. 结婚登记不属于行政许可，颁发营业执照属于行政许可
+2. 行政许可具有外部性，对内审批行为不属于行政许可
+3. 变更和撤销行政许可时，损害信赖利益要补偿
+4. 行政相对人不承担行政机关组织听政的费用
+5. 行政许可听证案卷排他
+*** 行政处罚
+**** 概念
+国家行政机关对构成违法行为的公民、法人和其他组织实施行政法上的制裁
+**** 一事不再罚
+对当事人同一个违法行为，不得给予量词以上 *罚款* 的行政处罚
+**** 行政处罚的种类
+***** 人身（自由）罚
+- 行政拘留
+- 限期出境、驱逐出境
+***** 行为（能力）罚
+- 责令停产停业
+- 暂扣或吊销许可证、执照
+***** 财产罚
+- 罚款 :: 没收违法所得、非法财物
+***** 声誉（申诫）罚
+- 警告
+**** 行政处罚的设定
+*行政处罚法规定，除法律、法规和规章以外的其他规范性文件不得设定行政处罚*
+- 法律 :: 全国人大和全国人常制定，可以设定各种行政处罚。限制人身自由的行政处罚只能由法律设定
+- 行政法规 :: 国务院制定，可以设定除限制人身自由以外的行政处罚
+- 地方性法规 :: 地方人大制定，可以设定除限制人身自由、吊销企业营业执照以外的行政处罚
+- 部门规章 :: 国务院部门制定，可在法律、行政法规规定的给予行政处罚的行为、种类和幅度的范围内做出其他规定
+- 地方政府规章 :: 地方政府制定，可在法律、行政法规规定的给予行政处罚的行为、种类和幅度的范围内做出其他规定
+**** 行政处罚的管辖
+由违法行为发生地的县级以上地方政府具有行政处罚权的行政机关管辖。法律、行政法规另有规定的除外
+对管辖发生争议的，报请 *共同上一级* 行政机关指定管辖
+**** 行政处罚的适用
+***** 裁量情节
+****** 不予处罚
+- 不满14周岁
+- 精神病人不能辨认或者控制自己行为时
+- 违法行为轻微并及时纠正，没有造成危害后果
+****** 从轻或减轻处罚
+- 已满14周岁不满18周岁
+- 主动消除或者减轻违法行为危害后果的
+- 受他人胁迫
+- 配合行政机关查处违法行为有立功表现的
+***** 追究时效
+原则上2年，法律另有规定的除外
+**** 行政处罚的决定程序
+***** 一般程序
+1. 调查或检查时执法人员不少于2人
+2. 行政处罚决定由行政机关负责人做出。对情节复杂或者重大违法行为给予较重处罚时，应由行政机关负责人集体讨论后作出
+3. 作出处罚决定前，依法向当事人告知给予行政处罚的事实、理由和依据
+4. 要听取当事人的陈述、申辩
+***** 简易程序
+****** 适用条件
+1. 违法事实确凿并有法定依据
+2. 处罚种类和幅度分别是对公民处50元以下、法人或组织1000元以下的罚款或警告的
+****** 规则
+- 可以一人执法
+- 执法人员当场表明身份，当场作出行政处罚决定并依照法律规定填写行政处罚决定书
+***** 听证程序
+****** 条件
+1. 行政机关将要作出责令停产停业、吊销许可证或者执照和较大数额罚款等行政处罚决定
+2. 经当事人依法提出听证要求，由行政机关组织
+**** 实战易错点 :note:
+1. 一事不再罚是一事不再罚款
+2. 罚金、没收财产、拘役不属于行政处罚
+3. 不告知（处罚的事实、理由和依据），不听取（陈述和申辩），行政处罚不成立
+4. 限制人身自由的行政处罚权只能由公安机关行使
+*** 治安管理处罚
+**** 概念
+公安机关给予实施治安违法行为的公民、法人和其他组织的行政制裁
+**** 种类
+- 警告
+- 罚款
+- 行政拘留
+- 吊销公安机关发放的许可证
+- 对违反治安管理的外国人，可以附加适用限期出境或者驱逐出境
+**** 时效
+6个月
+**** 治安调解
+民间纠纷 --> 违反治安 --> 可以调解 :: 如果成功 ->不罚；不成功或不履行 -> 罚＋告知起诉
+**** 违反治安管理规定的行为
+***** 扰乱公共秩序的行为 --- 对生产生活等正常社会活动秩序的侵害
+- 扰乱文化、体育等大型群众性活动秩序的
+- 散布谣言，谎报险情、疫情、警情或者以其他方式危害公共秩序的
+- 结伙斗殴
+***** 妨害公共安全的行为 --- 对不特定多数人生命健康和财产安全的危害
+- 制造、买卖、存储、邮寄、运输爆炸性、放射性、毒害性等危险物质或者传染病病原体
+- 盗窃、损毁路面井盖、照明等公共设施
+***** 侵犯人身权利、财产权利的行为 --- 对特定人和特定财产的侵害
+- 非法限制他人人身自由
+- 非法侵入他人住宅
+- 非法搜查他人身体
+- 公然侮辱他人或者捏造事实诽谤他人的
+- 盗窃、诈骗、哄抢、抢夺、敲诈勒索和故意损坏公私财物的
+***** 妨害社会管理的行为 --- 以危害国家机关正常管理为中心内容
+- 阻碍国家机关工作人员依法执行职务的
+- 阻碍执行紧急任务的消防车、救护车、警车等车辆通行的
+- 旅馆不按规定登记旅客信息的
+- 偷开他人机动车的 
+- 卖淫嫖娼
+**** 处罚决定
+1. 由县级以上人民政府公安机关决定。警告、500元以下罚款可以由派出所决定
+2. 公安机关作出吊销许可证以及2000元以上罚款的处罚决定前，应当告知违法行为人有权申请听证，行为人申请人听证的，应当及时举行
+3. 违反治安管理行为事实清楚，处警告或者200元以下罚款的，可以当场作出治安管理处罚决定
+**** 实战易错点 :note:
+1. 治安管理处罚也是行政处罚。违反治安，犯罪未满，进行治安管理处罚
+*** 行政强制
+**** 行政强制措施
+**** 行政强制执行
+**** 实战易错点 :note:
+*** 行政复议
+**** 概念
+**** 主要原则
+**** 行政复议范围
+**** 行政复议机关
+**** 行政复议程序
+**** 举证责任
+**** 实战易错点 :note:
+*** 行政诉讼
+**** 概念
+**** 行政诉讼的特有原则
+**** 受案范围
+**** 行政诉讼的管辖
+**** 行政诉讼的被告
+**** 行政诉讼的举证责任
+**** 起诉
+**** 审理
+**** 主要的一审判决
+**** 实战易错点 :note:
+*** 行政赔偿
+**** 概念
+**** 赔偿方式
+**** 行政赔偿范围
+**** 国家不承担赔偿责任的情形
+**** 赔偿义务机关
+**** 赔偿程序
+**** 实战易错点 :note:
 * 军地常识
 * 计算机
 * 公文写作与处理
