--- a/mind.org
+++ b/mind.org
@@ -1,4 +1,4 @@
-#+OPTIONS: toc:t ^nil author:zeamonk num:2
+* 目录                                                :TOC:
 * 习思想
 * 马克思主义哲学
 + 组成
@@ -1488,6 +1488,7 @@
 * 军地常识
 * 计算机
 * 公文写作与处理
+
 * 申论
 ** 考情认知
 ** 文字表达能力
