--- a/mind.org
+++ b/mind.org
@@ -1,4 +1,4 @@
-* 目录                                                :TOC:
+* Table of Contents                                                     :TOC:
 * 习思想
 * 马克思主义哲学
 + 组成
