--- a/mind.org
+++ b/mind.org
@@ -1456,35 +1456,223 @@
 1. 治安管理处罚也是行政处罚。违反治安，犯罪未满，进行治安管理处罚
 *** 行政强制
 **** 行政强制措施
+***** 概念
+行政机关在行政管理的过程中，为制止违法行为、防止证据损坏、避免危害发生、控制危险扩大等情形，依法对公民人身自由实施暂时性限制，或者对公民、法人、其他组织的财物实施暂时性控制的行为
+***** 种类
+- 限制公民人身自由
+- 查封场所、设施或者财物
+- 扣押财物
+- 冻结存款、汇款
+- 其他行政强制措施
 **** 行政强制执行
+***** 概念
+行政机关或者行政机关申请人民法院，对不履行行政决定的公民、法人、其他组织，依法强制履行义务的行为
+***** 种类
+****** 直接强制
+行政机关直接对当事人人身或者财产实施强制，迫使其履行义务和实现与履行义务相通状态的方法
+- 划拨存款、汇款
+- 拍卖或者依法处理查封、扣押的场所、设施或者财物
+****** 间接强制
+******* 代履行（代执行）
+当事人拒不履行的义务可由他人代替履行，行政机关请他人代为履行，并要求当事人承担相应费用
+******* 执行罚
+- 当事人拒不履行义务时，行政机关要求当事人承担一定的金钱给付义务，促使其履行义务
+- 如当事人拒不缴纳罚款，行政机关依法加处罚款或滞纳金
 **** 实战易错点 :note:
+1. 行政强制措施是对人身或财产的暂时限制；行政强制执行时对人身或财产的最终处理
+2. 到期不缴纳罚款，每日加罚3%
+3. 加处罚款不属于行政处罚
 *** 行政复议
 **** 概念
+行政机关根据上级对下级的监督权，在当事人的申请和参加下，按照行政复议程序对具体行政行为进行合法性和适当性审查，并作出裁决解决行政侵权争议的活动
 **** 主要原则
+***** 一级复议原则
+行政复议只进行一次受理，如不服，只能提起诉讼
+***** 书面复议原则
+行政复议原则上采取书面审查的办法
 **** 行政复议范围
+- 审查具体行政行为和部分抽象行政行为
+- 行政复议的申请人，在对具体行政行为进行复议的同时，可以对该行为依据的行政法规，提起进行审查的请求
 **** 行政复议机关
+1. 县级以上地方政府部门作出的行政行为，可向本级人民政府或上一级主管部门进行申请
+2. 海关、金融、外汇等实行垂直领导的行政机关、国家安全机关和税务机关，需向上一级主管部门申请
+3. 国务院部门或省、自治区、直辖市政府作出的行政行为，由自己进行复议
+4. 对国务院部门、省、自治区和直辖市政府复议结果不服的，可以进行行政诉讼或向国务院申请裁决，但国务院裁决后，不得再提起行政诉讼
+5. 两个或两个以上行政机关作为被申请人，由他们的共同上一级行政机关作为行政复议机关
 **** 行政复议程序
+***** 申请
+知道具体行政行为之日起60日内，可以书面申请，也可以口头申请
+***** 受理
+复议机关5日内进行审查，决定是否受理
+***** 决定
+受理后60日内作出决定，法律规定少于60日的除外
 **** 举证责任
+被申请人承担举证责任
 **** 实战易错点 :note:
+1. 行政复议直接审查具体行政行为，附带审查部分抽象行为，既审查合法性，又审查合理性
+2. 行政复议不是行政诉讼的必经程序
+3. 行政复议一般不适用调节
+4. 行政复议的申请和决定期限为60日
 *** 行政诉讼
 **** 概念
+法院应公民、法人或者其他组织的请求，通过审查行政行为合法性的方式，解决特定范围内行政争议的活动
 **** 行政诉讼的特有原则
+- 行政机关负责人出庭应诉原则（告官要见官）
+- 行政行为合法性审查原则（审查合法性）
 **** 受案范围
+***** 可以受理的案件
+对公民、法人或者其他组织合法权益造成侵害的具体行政行为、行政协议
+***** 不予受理的行政案件
+- 国家行为
+- 行政法规、规章或者行政机关制定、发布的具有普遍约束力的决定、命令
+- 对行政机关工作人员的奖惩、任免等决定
+- 行政机关最终裁决的行政行为
+- 刑事司法行为
+- 行政指导行为
 **** 行政诉讼的管辖
+***** 级别管辖
+1. 基层人民法院管理本辖区的第一审行政案件
+2. 中院管理下列案件
+   - 对国务院部门或者县级以上地方人民政府提起诉讼的案件
+   - 海关处理的案件
+   - 本辖区内重大、复杂的案件（社会影响打的共同诉讼案件；涉外涉港澳台的案件）
+   - 其他法律规定的案件
+3. 高院管理本辖区内重大、复杂的第一审行政案件
+4. 最高院管理全国范围内重大、复杂的第一审行政案件
+***** 地域管辖
+****** 一般地域管辖原则
+- 一般案件 :: 由最初作出具体行为的行政机关所在地人民法院受理（原告就被告）
+- 复议案件 :: 复议机关所在地人民法院、最初作出具体行政行为地行政机关所在地
+****** 特殊地域管辖
+- 因不动产提起地行政诉讼 :: 不动产所在地人民法院
+- 对限制人身自由地行政强制措施不服提起地诉讼 :: 被告所在地、原告所在地人民法院
+****** 指定管辖 
+- 有管辖权地人民法院由于特殊原因不能行使管辖权地，由上级人民法院指定管辖
+- 管辖权产生争议地，由双方协商解决。协商不成地，由共同上级人民法院指定管辖
+****** 管辖权转移
+- 上级法院有权审理下级法院管辖地第一审行政案件
+- 下级法院可以报请上级法院审理和指定管辖
+- 经最高院批准，高院可以根据审判工作实际情况，确定若干人民法院跨行政区管辖行政案件 
 **** 行政诉讼的被告
+***** 复议案件
+- 复议改变 :: 复议机关
+- 复议维持 :: 原告和复议机关（告漏了，通知追加；原告不同意追加，列为共同被告）
+- 复议机关不作为 :: 对复议机关不服，以复议机关为被告；对原具体行政行为不服，以原机关为被告
+***** 委托行政 
+- 行政机关委托的组织作出的行政行为，委托机关是被告（谁委托就告谁）
+***** 经上级机关批准作出的行政行为
+- 以对外发生法律效力的文书上署名的机关为被告
+***** 两个以上行政机关作出同一行为的
+共同作出行政行为的行政机关是共同被告
+***** 行政机关被撤销或职权变更的
+继续行使其职权的行政机关
 **** 行政诉讼的举证责任
+行政诉讼中，被告具有举证责任
+- 在诉讼过程中，被告及其诉讼代理人不得自行向原告、第三人和证人收集证据
+- 被告人应在收到起诉状15日内提交证据和所依据的规范性文件，并提出答辩状
 **** 起诉
+***** 起诉期限
+****** 复议后
+- 收到复议决定书15日内
+- 逾期不复议的，复议期满15日内
+****** 直接起诉
+- 普通案件6个月内
+- 不动产案件超过20年、其他案件超过5年不受理
+***** 起诉形式
+- 向法院递交诉状，并按照被告人数提出副本
+- 书写有困难的，可以口头起诉，由人民法院记入笔录，出具注明日期的书面凭证，并告知对方当事人
 **** 审理
+***** 审判制度
+****** 公开审判制度
+- 人民法院公开审理行政案件，但涉及国家秘密、个人隐私和法律另有规定的除外
+- 涉及商业秘密的案件，当事人申请不公开审理的，可以不公开审理
+****** 诉讼不停止行政行为制度
+诉讼期间，不停止行政行为的执行，但有下列情形之一，裁定停止执行：
+- 被告认为需要停止执行
+- 原告或者利害关系人申请停止执行，人民法院认为该行政行为的执行会造成难以弥补的损失，并且停止执行不损害国家利益和社会公共利益的
+- 人民法院认为该行政行为的执行会造成难以弥补的损失
+- 法律法规规定停止执行的
+****** 调解制度
+行政案件一般不适用调解，但行政赔偿、补偿以及行政机关行使法律、法规规定的自由裁量权的案件可以调解
+***** 一审程序
+****** 普通程序
+******* 组织
+人民法院审理行政案件，由审判员组成合议庭，或者由审判员、陪审员组成合议庭。合议庭应当是三人以上的单数
+******* 期限
+6个月内作出一审判决
+****** 简易程序
+******* 适用条件
+1. 事实清楚，权利义务关系明确，争议不大的案件
+   - 被诉行政行为是依法当场作出的
+   - 案件涉及款项2000元以下的
+   - 属于政府信息公开案件的
+2. 当事人各方同意适用简易程序
+~二审案件、发回重审案件、再审案件均不得适用简易程序~
+******* 组织
+审判员一人独任审理
+******* 期限
+45日内
+***** 二审程序
+****** 二审程序启动
+- 当事人不服一审判决，再判决书送达15日内，向上一级人民法院提起上诉
+- 当事人不服从一审裁定的，在裁定书送达10日内，向上一级人民法院上诉
+****** 二审审查原则
+对原审法院的裁决、裁定和被诉行政行为进行全面审查
 **** 主要的一审判决
+***** 驳回原告诉讼请求裁决
+- 行政行为证据确凿，适用法律、法规正确，符合法定程序的
+- 原告申请被告履行法定指责或给付义务理由不成立的
+***** 撤销判决
+- 主要证据不足的
+- 适用法律、法规错误的
+- 违反法定程序的
+- 超越职权的
+- 滥用职权的
+- 明显不当的
+***** 变更判决
+- 行政处罚明显不当
+- 其他行政行为涉及对款项的确定、认定有错误的
+**** 行政复议与行政诉讼的区别
+|          | 行政复议                       | 行政诉讼                       |
+|----------+--------------------------------+--------------------------------|
+| 处理机关 | 行政机关                       | 法院                           |
+| 受案范围 | 具体行政行为和部分抽象行政行为 | 具体行政行为和部分抽象行政行为 |
+| 审查内容 | 合法性、合理性                 | 以审查合法性为原则             |
+| 提起方式 | 可口头可书面                   | 可口头可书面                   |
+| 审查方式 | 书面审查                       | 开庭审理                       |
+| 属性     | 行政行为，一般非最终处理       | 司法行为，具有终局性           |
 **** 实战易错点 :note:
+1. 法院审理行政案件，以审查具体行政行为的合法性为原则
+2. 个人不可能成为行政诉讼的被告
 *** 行政赔偿
 **** 概念
+行政机关及其工作人员在行使职权过程中，违法侵害公民、法人或其他组织的合法权益并造成损害的，国家对此承担赔偿责任
 **** 赔偿方式
+以支付赔偿金为主，还有返还财产、恢复原状、清除影响、恢复名誉、赔礼道歉等
 **** 行政赔偿范围
+- 行政机关及其工作人员在行使职权过程中侵犯人身权
+- 行政机关及其工作人员在行使职权过程中侵犯财产权
+- 行政机关不履行、拖延履行法定职责，致使公民、法人或者其他组织的合法权益受到损害
 **** 国家不承担赔偿责任的情形
+- 行政机关工作人员与行使职权无关的个人行为
+- 因公民、法人和其他组织自己的行为致使发生损害的
+- 法律规定的其他情形
 **** 赔偿义务机关
+***** 单独赔偿义务机关
+***** 共同赔偿义务机关
+***** 被授权组织
+***** 被委托组织
+***** 复议时
+经行政机关复议，最初造成侵权行为的行政机关为赔偿义务机关。但复议机关的复议决定加重损害的，复议机关对加重部分履行赔偿义务
 **** 赔偿程序
+- 单独提出赔偿请求
+知道侵权行为之日起2年内提出赔偿申请，书面或口头
+- 申请复议时一并提出赔偿请求
+- 提起诉讼时一并提出赔偿请求
 **** 实战易错点 :note:
+1. 行政赔偿的主要方式是支付赔偿金
+2. 行政赔偿责任的主体是国家，赔偿义务机关是行政主体
+3. 职务行为国家赔，个人行为自己担
 * 军地常识
 * 计算机
 * 公文写作与处理
