--- a/mind.org
+++ b/mind.org
@@ -718,76 +718,148 @@
 - 人应该在对社会的奉献中实现和表现自己的价值
 - 唯物史观强调人的社会价值是第一位的
 * 法律
+** 基础导入
+*** 法的渊源（法的具体形式）
+- 宪法 :: 国家最高权力机关制定（全国人大）
+- 法律 :: 全国人大 --- 基本法律；全国人常 --- 非基本法律
+- 行政法规 :: 国务院制定
+- 地方性法规 :: 省、自治区、直辖市的人大及人常，以及设区的市、自治州的人大人常（省、市）
+- 自治法规 :: 民族自治地方的人大制定自治条例和单行条例（自治区、自治州、自治县）
+- （行政）规章 :: 国务院各部委和有权直属机构 --- 部门规章；省市人民政府 --- 地方政府规章
 ** 宪法
 *** 宪法的特征
 **** 宪法是国家的根本法
 + 在内容上，宪法规定国家最根本、最重要的问题 :: 内容根本
 + 在法律效力上，宪法的法律效力最高 :: 效力最高
-  - 宪法是制定普通法律的依据，普通法律由宪法派生
-  - 任何普通法律、法规不得与宪法的原则和精神相违背
-  - 宪法是一切国家机关、社会团体和全体公民的最高行为准则
+  - 宪法是制定普通法律的 *依据* ，普通法律由宪法派生
+  - 任何普通法律、法规不得与宪法的原则和精神相 *违背*
+  - 宪法是一切国家机关、社会团体和全体公民的 *最高行为准则*
 + 宪法在制定和修改程序上，比普通法律更加严格 :: 治修严格
+***** 宪法和法律修改程序对比
+|          | 宪法                          | 法律                                               |
+|----------+-------------------------------+----------------------------------------------------|
+| 提议主体 | 全人常、1/5以上的全人大代表   | 全国人大主席团、全人常、国务院、军委、两高、监察委 |
+| 通过人数 | 全国人大全体代表的2/3以上多数 | 全国人大全体代表过半数                             |
+| 公布机关 | 主席团                        | 国家主席                                           |
 **** 宪法是公民权利的保障书
 - 宪法的基本内容，主要规定国家权力的正确行使和公民基本权利的有效保障
 - 宪法 *最主要、最核心* 的价值在于，它是公民权利的保障书
 **** 宪法是民主事实法律化的基本形式
-民主主体的普遍化或者说民主事实的普遍化，是宪法产生的前提。宪法的根本法地位，以及宪法具有的公民权利保障书的核心价值，从根本上确认了民主制度的地位
+- 民主主体的普遍化或者说民主事实的普遍化，是宪法产生的前提。
+- 宪法的根本法地位，以及宪法具有的公民权利保障书的核心价值，从根本上确认了民主制度的地位
 **** 实战易错点 :note:
+1. 只要有宪法，那么这个国家就是民主国家（×）
+2. 一切国家机关、政党必须以宪法为根本活动准则
+3. 宪法就我国的国体和政体作出规定
 *** 宪法的基本原则
 **** 人民主权原则
 国家的一切权利属于人民
 **** 基本人权原则
 国家尊重和保障人权（2004年宪法修正案新增）
-**** 法治原则
+**** 法治原则（1999年入宪）
 核心思想在于依法治理国家，法律面前人人平等
 **** 权力制约原则
 国家权力的各部分之间相互监督、彼此牵制，从而保障公民权利的原则
 **** 实战易错点 :note:
 1. 人民行使权力的机关是全国人民代表大会和地方各级人民代表大会
-2. 权力制约原则在资本主义表现为“分权制衡”，社会主义表现为“监督原则”
-3. 对于发展中国家来说，最重要的人权仍然是政治权和人身自由权
+2. 我国权力机关是人大和人常，权力属于人民
+3. 司法、行政、监察机关不享有权力，而是在人大的决定下去执行
+4. 权力制约原则在资本主义表现为 *分权制衡*  ，社会主义表现为 *监督原则*
+5. 我国人权强调的是 *生存权和发展权*
+6. 对于发展中国家来说，最重要的人权仍然是政治权和人身自由权（×）
 *** 宪法运行
+**** 知识拓展
+- 英国没有成文宪法
+- 美国独立战争之后制定了世界上第一部资本主义性质成文宪法
+- 苏联制定了第一部社会主义性质宪法
 **** 中国宪法发展历程
-1. _中国第一部宪法性文件是1908年清政府颁布的《钦定宪法大纲》_
-2. 新中国第一部宪法性文件是《中国人民政治协商会议共同纲领》
-3. 新中国先后颁布四部宪法：
+1. _中国第一部 *宪法性文件* 是1908年清政府颁布的《钦定宪法大纲》_
+2. 1912年，《中华民国临时约法》是我国第一部资本主义性质的宪法
+3. 1949年，新中国第一部宪法性文件是《中国人民政治协商会议共同纲领》
+4. 新中国先后颁布四部宪法
    - 1954年宪法 :: 中国第一部社会主义类型的宪法
    - 1975年宪法
    - 1978年宪法
-   - 1982年宪法 :: 现行宪法 
-**** 宪法的修改程序
-- 提议 :: 全人常或 *五分之一以上* 的全国人大代表
-- 通过 :: 全人大 *全体代表* 的 *三分之二以上* 多数
-**** 宪法修改实践
-***** 全面修改
+   - 1982年宪法 :: 现行宪法
+5. 12月4日是宪法日（82宪法通过）
+6. 75、78宪法内容和指导思想是错误的
+***** 宪法修改实践
+****** 全面修改
 - 第一次 :: 修改54宪法，通过75宪法
 - 第二次 :: 修改75宪法，通过78宪法
 - 第三次 :: 修改78宪法，通过82宪法
-***** 部分修改
+****** 部分修改
 + 78宪法
   - 79年部分修改
   - 80年部分修改
 + 82宪法 :: 5次修改
   - 88年、93年、99年、04年、18年
+**** 宪法的修改程序
+- 提议 :: 全人常或 *五分之一以上* 的全国人大代表
+- 通过 :: 全人大 *全体代表* 的 *三分之二以上* 多数
 **** 历次宪法修正案的主要内容
-- 第十三修正案 :: 依法治国，建设社会主义法治国家（93年）
-- 第二十四修正案 :: 国家尊重和保障人权（04年）
-- 第三十六修正案 :: 中国共产党领导是中国特色社会主义最本质的特征（18年）
+***** 88宪法修正案
+- 第1修正案：私营经济是补充，对私营经济实行引导、监督、管理
+- 第2修正案：允许转让土地的使用权
+***** 93修正案
+- 第3修正案：我国正处于社会主义初级阶段，坚持改革开放，把我国建设成为富强、民主、文明的国家
+- 第4修正案：多党合作和政治协商制度
+- 第5修正案：国营经济” 改为“国有经济”
+- 第6修正案：家庭联产承包为主的责任制
+- 第7修正案：国家实行社会主义市场经济，加强经济立法，完善宏观调控
+- 第11修正案：县级人大任期从三年改为五年
+***** 99修正案（第一次提出依法治国）
+- 第12修正案：我国将长期处于社会主义初级阶段，邓小平理论入宪
+- 第13修正案：*依法治国* ，建设社会主义法治国家
+- 第14修正案：公有制为主体、多种所有制经济共同发展的基本经济制度和按劳分配为主体、多种分配方式并存的分配制度。
+- 第15修正案：家庭联产承包经营为基础，统分结合的双层经营体制。
+- 第16修正案：非公有制经济是重要组成部分，国家保护个体经济、私营经济的合法的权利和利益，对个体经济、私营经济实行 *引导、监督和管理*。
+- 第17修正案：“反革命活动” 改为“危害国家安全的犯罪” 。
+***** 04修正案（尊重和保障人权）
+- 第18修正案：在“三个代表” 重要思想指引下，推动物质文明、政治文明、精神文明协调发展
+- 第19修正案：爱国统一战线中增加“社会主义事业的建设者”
+- 第20修正案：国家为了公共利益的需要，可以征收或征用土地并给予补偿
+- 第21修正案：国家保护非公有制经济的合法的权利和利益，对非公有制经济进行鼓励、支持、引导、监督、管理
+- 第22修正案：公民合法的私有财产不受侵犯；国家保护公民的私有财产权和继承权；征收或征用公民私有财产并给予补偿
+- 第23修正案：建立健全同经济发展水平相适应的社会保障制度
+- 第24修正案：国家尊重和保障人权
+- 第25修正案：全国人大中增加特别行政区选出的人大代表
+- 第26修正案：戒严” 改为“紧急状态”
+- 第28修正案：国家主席代表国家进行国事活动，接受外国使节
+- 第30修正案：乡级人大任期从三年改为五年
+- 第31修正案：增加国歌
+  49年定为代国歌，04年确定，2017.10.1制定《国歌法》
+***** 18修正案
+- 第32修正案：在科学发展观、习近平新时代中国特色社会主义思想指导下，推动物质文明、政治文明、精神文明、社会文明、生态文明协调发展，实现中华民族伟大复兴
+- 第33修正案：爱国统一战线中增加“致力于中华民族伟大复兴的爱国者”
+- 第35修正案：坚持和平发展道路，坚持互利共赢开放战略，推动构建人类命运共同体
+- 第36修正案： *中国共产党领导* 是中国特色社会主义最本质的特征
+- 第37修正案：国家机构中增加“监察机关”，由人民代表大会产生，对它负责，受它监督
+- 第39修正案：国家倡导社会主义核心价值观
+- 第40修正案：增加宪法宣誓制度
+- 第45修正案：取消国家主席、副主席的连任限制
+- 第52修正案：规定监察委员会的组成、任期及职权
 **** 宪法宣誓
 ***** 宣誓主体
-- 各级人大及县级以上各级人常选举或决定任命的国家工作人员
+- 各级人大及县级以上各级人常 *选举或决定* 任命的国家工作人员
 - 各级人民政府、监察委员会、人民法院、人民检察院任命的国家工作人员
 ***** 组织机构
 - 全国人大会议主席团、全人常委员长会议、国家监察委员会、两高、外交部、国务院及其各部门，由任命机关组织
+  中央 --- 人大常委会委员长会议组织
 - 地方工作人员组织办法由省级常委会制定，报全人常备案
 ***** 宣誓方式
 - 单独宣誓或集体宣誓
-- 庄重严肃，悬挂国旗或国徽
+- 庄重严肃，悬挂 *国旗或国徽*
 - _应当奏唱_ 中华人民共和国国歌
+**** 实战易错点 :note:
+1. 建国后我国共颁布了4部宪法，现行宪法是82宪法
+2. 党委组织部门任命的国家工作人员不一定需要宣誓（宣誓只针对国家机关）
 *** 国家制度
 **** 人民民主专政制度
 ***** 概述
 中华人民共和国是工人阶级领导的，以工农联盟为基础的人民民主专政的社会主义国家
+- 国体 :: 人民民主专政（国家性质）
+- 根本制度 :: 社会主义制度
 ***** 我国人民民主专政的主要特色
 ****** 中国共产党领导的多党合作和政治协商制度
 - 地位 :: 人民民主专政突出的特点和优点
@@ -799,23 +871,23 @@
 - 构成 :: 全体社会主义劳动者、社会主义事业建设者、拥护社会主义的爱国者、拥护祖国统一和致力于中华民族伟大复兴的爱国者
 - 组织形式 :: 中国人民政治协商会议
 ****** 18修正案新增
-中国共产党领导是中国特色社会主义最本质的特征
+*中国共产党领导* 是中国特色社会主义最本质的特征
 把党的领导与社会主义制度内在统一起来，是对马克思主义政党建设理论的运用和发展，是对共产党执政规律和社会主义建设规律认识的深化
 **** 人民代表大会制度
-- 是我国的 *政权组织形式*
+- 是我国的 *政权组织形式* (政体）
 - 是我国的 *根本政治制度*
 - 是我国实现社会主义民主的基本形式
 **** 国家标志
-- 国旗
-- 国徽
-- 国歌
+- 国旗（1990)
+- 国徽（1991)
+- 国歌（2017)
 - 首都
 **** 国家结构形式
-- 单一制
+- 单一制 --- 只有一部宪法
 **** 选举制度
 ***** 基本原则
 + 普遍性原则
-+ 平等性原则
++ 平等性原则 :: 城乡比例相同；选民选票平等
 + 秘密投票原则
 + 直接选举和间接选举并用的原则
   - *县、乡* 人大代表由选区选民直接选举产生
@@ -833,9 +905,11 @@
 - 原则 :: 一次登记，长期有效
 - 年满18周岁，没有被剥夺政治权利的中国公民
 - 精神病人不能行使选举权利的，经选举委员会确认，不列入选民名单 
-****** 代表候选人的提出
+****** 代表候选人的提名
 - 全国和地方各级人大的代表候选人，按选区或者选举单位提名产生
 - 全国和地方各级人大应实行差额选举
+  直接选举 --- 候选人名额多于应选的1/3到1倍
+  间接选举 --- 多于1/5到1/2
 ****** 投票
 + 方式 :: 无记名投票
 + 委托投票
@@ -843,10 +917,10 @@
   - 选举期间外出，经选举委员会同意，可书面委托其他选民代投
   - 每人接受委托不超过三人
 + 投票效力
-  - 票数多于投票人数，无效
+  - 票数多于投票人数，选举无效
   - 选票所选人数多于规定人数，作废
 ****** 当选
-- 直接选举双过半 :: 过半数选民参加投票；得票超过参加人数的一半
+- 直接选举双过半 :: 过半数选民参加投票，选举有效；得票超过参加人数的一半，当选
 - 间接选举 :: 获得全体代表过半数的选票
 ***** 代表的权利
 - 出席本级人大会议，参加审议各项议案、报告和其他议题，发表意见
@@ -867,26 +941,31 @@
 - 被剥夺政治权利的
 - 丧失行动能力的
 ***** 基层群众自治制度
-自我管理、自我教育、自我服务
+自我管理、自我教育、自我服务的社会组织
 ****** 村民委员会
-- 组成 :: 主任、副主任、委员共三至七人，村民直接选举产生，应有妇女成员，多民族村应有人数较少的民族成员
+- 组成 :: 主任、副主任、委员共三至七人，年满18岁未被剥夺政治权利的村民直接选举产生，应有妇女成员，多民族村应有人数较少的民族成员
 - 任期 :: 每届5年，可连选连任。村委工作成员可以发补贴
 ****** 居民委员会
 - 组成 :: 主任、副主任、委员共五至九人，可由居民选举产生，也可由每户派代表选举产生，还可由每个居民小组选举代表二至三人选举产生
 - 任期 :: 每届5年，可连选连任
+****** 基层组织
+- 基层群众组织 --- 村委会、居委会
+- 基层工人组织 --- 工会
 ***** 民族区域自治制度
-- 民族自治的地方 :: 自治区、自治州、自治县
+- 民族自治的地方 :: 自治区、自治州、自治县（省市县）
 - 自治机关 :: 民族自治地方的人大和政府
-- 领导担任 :: 行政一把手，必须本民族公民；书记或副书记有本族公民即可
-- 权力 :: 自治权、立法权、交通权执行权、财政自治权、治安权、科教文卫自治权
+- 领导担任 :: 行政一把手（主席、州长、县长），必须本民族公民；人常，主任或者副主任有本族公民即可
+- 权力 :: 自治权、立法权（自治法规－自治条理、单行条例）、变通权执行权、财政自治权、治安权（可以自行组建治安机关）、科教文卫自治权
 ***** 特别行政区制度
-+ 特别行政区是中国不可分割的部分，是一个直辖于中央人民政府的地方行政区域，由全国人大授权实行高度自治
++ 特别行政区是中国不可分割的部分，是一个直辖于中央人民政府的地方行政区域，由 *全国人大* 授权实行高度自治
 + 特区政府享有高度自治权
   - 立法权。特区立法机关制定的法律须报全人常备案， *备案不影响生效*
+    特区《基本法》全国人大制定并修改，全国人常负责解释
   - 司法权。独立的司法权和终审权
   - 财政权。通用自己的货币，财政独立，不上缴中央财政
-  - 对外交往权。中央人民政府可授权特区依照基本法自行处理对外事务
+  - 对外交往权。中央人民政府可授权特区依照基本法自行处理对外事务（经济、文化交往权，也叫外事权）
   - 管理权。自行维护社会治安
+  - 不享有 *外交权* 和 *防务权（国防）*
 ***** 国家经济制度
 ****** 基本经济制度
 ******* 社会主义市场经济体制
@@ -894,18 +973,20 @@
 - 发展社会主义市场经济是一项重要的国家任务
 ******* 公有制为主体、多种所有制经济共同发展
 + 公有制经济
-  - 国有经济，社会主义全民所有制经济，国民经济的主导力量。国家保障国有经济的巩固和发展
-  - 集体经济，国家保护城乡集体经济组织的合法的权利和权益，鼓励、指导和帮助集体经济的发展
+  - 国有经济，社会主义 *全民所有* 制经济，国民经济的主导力量。国家保障国有经济的巩固和发展
+  - 集体经济，国家保护城乡集体经济组织的合法的权利和权益， *鼓励、指导和帮助* 集体经济的发展
 + 非公有制经济
   - 社会主义市场经济的重要组成部分
   - 国家保护个体经济、私营经济等非公有制经济的合法的权利和权益
-  - 国家鼓励、支持和引导非公有制经济的发展，并对非公有制经济依法实行监督和管理
+  - 国家 *鼓励、支持和引导* 非公有制经济的发展，并对非公有制经济依法实行监督和管理
 ******* 分配制度
 按劳分配为主体，多种分配方式并存的分配制度
 ****** 财产权制度
-******* 公共财产权
+******* 公共财产权（神圣不可侵犯）
 - 专属国家所有的 :: 矿藏、水流、海域、城市的土地、无线电频谱、国防资产
 - 专属集体所有的 :: 自留山、自留地、宅基地
+- 森林、山岭、草原、荒地、滩涂原则上属于国家所有，法律规定属于集体所有的除外
+- 农村和城市郊区的土地原则上属于集体，法律规定属于国家的除外 
 ******* 私有财产权
 - 04宪法修正案规定：公民 *合法的* 私有财产不受侵犯
 - 国家依照法律保护公民的 *私有财产权* 和 *继承权*
@@ -914,6 +995,8 @@
 1. 国体=国家性质=国家的权力属于谁=人民民主专政
 2. 政体=政权组织形式=权力如何行使=人民代表大会制度
 3. 中华人民共和国的一切权力属于人民
+4. *危害国家安全、无期徒刑、死刑* 的犯罪分子一定会被剥夺政治权利
+5. 公民合法的私有财产神圣不可侵犯（×）
 *** 公民基本权利
 **** 平等权
 - 法律面前一律平等
@@ -1673,6 +1756,196 @@
 1. 行政赔偿的主要方式是支付赔偿金
 2. 行政赔偿责任的主体是国家，赔偿义务机关是行政主体
 3. 职务行为国家赔，个人行为自己担
+** 民法
+*** 民法的概念及基本原则
+**** 概念
+民法是调整平等主体的自然人、法人和非法人组织之间的人身关系和财产关系的行为规范
+**** 基本原则
+- 平等原则 :: 主体身份的平等，而非绝对平等
+- 自愿原则 :: 民事主体从事民事活动时，以自己的意志充分表达自己的意愿，既包括按自己的意愿参与，也对此导致的后果承担责任
+- 公平原则 :: 以利益均衡作为价值判断标准
+- 诚实信用原则 :: 民法的帝王条款
+- 不违反法律和公序良俗原则 :: 公共秩序和善良习俗
+- 绿色原则 :: 有利于节约资源和保护生态环境的原则
+*** 民事法律关系的主体
+**** 自然人的民事权利能力
+- 自然人依法享有民事权利和承担民事义务的资格
+- 始于出生，终于死亡
+- 涉及遗产继承、接受赠与等胎儿利益保护的，胎儿视为有民事权利的能力，但娩出时死亡的除外
+**** 自然人的民事行为能力
+自然人能以自己的行为享有民事权利、承担民事责任的能力，即自然人依法独立进行民事活动的资格
+****** 完全民事行为能力
+******* 情形
+- 年满18周岁
+- 16-18岁，以自己的劳动收入作为主要生活来源的
+******* 法律后果
+可以独立实施民事法律行为（但有一些需要满足其他条件，比如结婚必须达到法定年龄）
+****** 限制民事行为能力
+******* 情形
+- 已满8岁，未满18周岁
+- 不能完全辨认自己行为的成年人
+******* 法律后果
++ 能够独立从事
+  - 纯获益的民事法律行为
+  - 与其年龄、智力和精神状况相适应的民事法律行为
++ 其他民事行为能力 :: 由其法定代理人代理或者经其法定代理人同意、确认
+****** 无民事行为能力
+******* 情形
+- 未满8周岁
+- 不能辨认自己行为的成年人
+- 8周岁以上不能辨认自己行为的未成年人
+******* 法律后果
+- 不可独立实施民事法律行为，均由其法定代理人实施
+**** 宣告失踪和宣告死亡
+***** 宣告失踪
+****** 概念
+自然人下落不明达到法定期限，经利害关系人申请，由人民法院宣告为失踪人并设立财产代管人的法律制度
+****** 宣告失踪的条件
+- 被申请人下落不明
+- 下落不明达到法定期限 --- 满2年
+- 经利害关系人申请 --- 近亲属、债权人、债务人等，无顺序限制
+- 由法院宣告 --- 发出寻找公告，公告期3个月，期满仍无音讯，判决宣告失踪
+***** 宣告死亡
+****** 概念
+自然人下落不明达到法定期间，经利害关系人申请，由法院推定其死亡，宣告结束失踪人以生前住所地为中心的民事法律关系的制度
+****** 宣告死亡的条件
+- 被申请人下落不明
+- 下落不明达到法定期限 --- 一般情况为4年，因意外事件下落不明，为2娘；因意外事件下落不明，且须经有关机关证明不可能生存的，无期间限制
+- 经利害关系人申请 --- 近亲属、债券人、债务人等，无顺序限制
+- 由法院宣告 --- 一般情况，公告期1年；因意外事件下落不明，并经有关机关证明不可能生存的，公告期为3个月
+***** 宣告死亡及死亡宣告被撤销的效力
+|      | 宣告死亡的效力                       | 死亡宣告被撤销的效力                                                           |
+|------+--------------------------------------+--------------------------------------------------------------------------------|
+| 财产 | 债权债务清理，继承关系开始           | 善意申请人，返回财产或补偿；恶意申请人，返还财产，有损失需赔偿                 |
+| 婚姻 | 婚姻关系消灭                         | 配偶未再婚的，自行恢复；再婚或向婚姻登记机关书面声明不愿意恢复的，不得自行恢复 |
+| 子女 | 配偶可以单方面决定子女被他人依法收养 | 不得以未经本人同意为由主张收养关系无效                                         |
+**** 监护
+***** 法定监护人
+****** 未成年人的法定监护人
++ 当然监护人 :: 父母（离婚不影响法定监护关系）
++ 父母死亡或没有监护能力的
+  - 第一顺序 :: 祖父母、外祖父母
+  - 第二顺序 :: 兄、姐
+  - 第三顺序 :: 其他愿意担任监护人的个人或组织，但须经未成年人住所地的居民委员会、村民委员会或者民政部门同意
+****** 成年人的法定监护人
++ 下列有监护能力的人按顺序担任监护人
+  - 第一顺序 :: 配偶
+  - 第二顺序 :: 父母、子女
+  - 第三顺序 :: 其他近亲属
+  - 第四顺序 :: 其他愿意担任监护人的个人或组织，但须经被监护人住所地的居民委员会、村民委员会或者民政部门同意
+****** 兜底
+不论成年人还是未成年人，没有依法具有监护人资格的人的，监护人又民政部门担任，也可以由具备履行监护职责条件的被监护人住所地的居民委员会、村民委员会担任
+****** 实战易错点 :note:
+- 未成年人的父母是未成年人的当然监护人，未成年人父母的监护人资格不因离异或分居而发生变动
+- 监护人可以是自然人、也可以是组织；可以是一人，也可以是多人
+***** 指定监护
+有法定监护资格的人之间对担任监护人有争议时（争抢或推诿），由监护权利机关指定监护人
+****** 指定监护的机关
+- 被监护人住所地的居民委员会、村民委员会或者民政部门指定，不服的，可向法院申请裁定
+- 也可直接向法院申请裁定
+****** 指定监护的原则
+- 尊重被监护人的真实意愿
+- 最有利于被监护人的原则
+****** 临时监护
+指定监护人前，由被监护人住所地的居委会、村委会、法律规定的有关组织或者民政部门担任临时监护人
+****** 指定监护的效力
+指定后，不得擅自变更，擅自变更的，不免除被指定的监护人的责任
+***** 遗嘱监护
+被监护人的父母任监护人的，可以通过遗嘱指定监护人
+***** 协议监护
+依法具有监护资格的人之间可以协议确定监护人。协议确定监护人应当尊重被监护人的真实意愿
+***** 委托监护
+- 具有完全民事行为能力的成年人，可以与其近亲属、其他愿意担任监护人的个人或组织事先协商，以书面形式确定自己的监护人
+- 协商确定的监护人在该成年人丧失或者部分丧失民事行为能力时，履行监护职责
+**** 法人
+***** 法人的概念
+法人指的是具有民事权利能力和民事行为能力，依法独立享有民事权利、承担民事义务的组织
+***** 法人成立的条件
+- 依法成立 --- 符合法律法规，经设立登记或命令
+- 有必要的财产或者经费
+- 有名称、组织机构及场所
+- 能够独立承担民事责任
+***** 法人的分类
+|            | 概念                                                 | 类型                                       |
+|------------+------------------------------------------------------+--------------------------------------------|
+| 营利法人   | 以取得利润并分配给股东等出资人为目的成立的法人       | 有限责任公司、股份有限公司和其他企业法人等 |
+| 非营利法人 | 为公益目的或其他非营利目的成立                       | 事业单位、社会团体、基金会、社会服务机构   |
+| 特别法人   | 机关法人、农村经济组织法人、城镇农村合作经济组织法人 | 基层群众性自治组织法人等                   |
+**** 实战易错点 :note:
+1. 营利法人与非营利法人的区别看目的，而非是否取得利润
+*** 民事法律行为 
+**** 概念
+民事法律行为是指民事主体通过意思表示设立、变更、终止民事法律关系的行为
+**** 意思表示
+***** 意思表示的生效规则
+****** 无相对人的意思表示
+表示完成时生效，法律另有规定的除外
+****** 有相对人的意思表示
+- 以对话方式作出 :: 相对人知道其内容时生效
+- 以非对话方式作出 :: 到达相对人时生效
+- 以公告方式作出 :: 公告发布时生效
+***** 意思表示的作出方式
+- 行为人可以明示或默示作出意思表示
+- 沉默只有在法律规定、当事人约定或者符合当事人之间的交易习惯时，才可以视为意思表示
+***** 意思表示的撤回
+- 行为人可以撤回意思表示
+- 撤回意思表示的通知应当在意思表示到达相对人前或者与意思表示同时到达相对人
+**** 民事法律行为的效力
+***** 有效的民事法律行为
+- 行为人具有相应的民事行为能力
+- 意思表示真实
+- 不违反法律、行政法规的强制性规定，不违背公序良俗
+***** 效力待定的民事法律行为
+- 限制民事行为能力人实施的超越能力范围的民事法律行为
+- 无权代理行为
+***** 可撤销的民事法律行为
+- 重大误解
+- 胁迫
+- 欺诈
+- 显失公平
+***** 无效的民事法律行为
+- 无民事行为能力人实施的民事法律行为无效
+- 行为人与相对人以虚假的意思表示实施的民事法律行为无效。以虚假的意思表示隐藏的民事法律行为的效力，依照有关法律规定处理
+- 违反法律、行政法规的强制性规定的民事法律行为无效，但该强制性规定不导致该民事法律行为无效的除外
+- 违背公序良俗的民事法律行为无效
+- 行为人与相对人恶意串通，损害他人合法权益的民事法律行为无效
+**** 代理
+- 代理人在代理权限范围内，以被代理人名义，与第三人为民事法律行为，从而对被代理人直接发生法律效果
+- 结婚、立遗嘱等依照法律规定、当事人约定或者民事法律行为的性质，应当由本人亲自实施的法律行为，不得代理
+- 由于本人过失或基于本人与无权代理人之间的特殊关系。善意第三人确信无权代理人享有代理权而与之为民事行为，代理行为的法律效果直接归本人承受
+*** 诉讼时效
+**** 概念
+在法定期间内不行使请求权
+**** 诉讼时效期间及起算
+***** 普通诉讼时效
+- 一般诉讼时效 :: 权利人知道或应当知道权利受到损害以及义务人之日起3年内
+- 最长诉讼时效 :: 自权利受到损害之日起20年内
+***** 特殊诉讼起算
+- 当事人约定同一债务分期履行的，诉讼时效期间自最后一期履行期限届满之日起
+- 无民事行为能力人或者限制民事行为能力人对其法定代理人的请求权的诉讼时效期间，自该法定代理终结之日起算
+- 未成年人遭受性侵害，自受害人满18周岁起算
+**** 诉讼时效的中止与中断
+***** 诉讼时效中止
+****** 原因
+权利人受制于客观因素无法行使权利
+****** 具体情形
+- 不可抗力
+- 无民事行为能力人或者限制民事行为能力人没有法定代理人，或者法定代理人死亡、丧失民事行为能力、丧失代理权
+- 继承开始后未确定继承人或遗产管理人
+- 权利人被义务人或其他人控制
+- 其他情形
+****** 法律后果
+自中止时效的原因消除之日起满6个月，诉讼时效期间届满
+***** 诉讼时效中断
+****** 原因
+权利人积极行使了权利
+****** 具体情形
+- 权利人向义务人提出履行请求
+- 义务人同意履行义务
+- 权利人提起诉讼或者申请仲裁
+- 与提起诉讼或者申请仲裁具有同等效力的其他情形
+****** 法律后果
+从中断、有关程序终结时起，诉讼时效期间重新计算
 * 军地常识
 * 计算机
 * 公文写作与处理
