--- a/mind.org
+++ b/mind.org
@@ -1,5 +1,658 @@
 * Table of Contents                                                     :TOC:
+* 时事政治
+** 重要会议
+*** 十九届四中全会
+**** 会议概况
+- 擘画“中国之治”新蓝图
+- 2019.10.28-2019.10.31
+- 中央政治局主持
+- 通过《中共中央关于坚持和完善中国特色社会主义制度、推进国家治理体系和治理能力现代化若干重大问题的决定》
+**** 对重大活动的评价
+- 成立70周年：极大振奋和凝聚党心军心民心
+- 改开40周年：增强将改革进行到底的信心
+改革是社会主义制度的自我发展和完善
+- 不忘初心、牢记使命主题教育成效明显
+- 深化党的国家机构改革各项工作胜利完成
+**** 重要判断和结论
+- 中特制度是党和人民在长期实践探索中形成的科学制度体系
+	- 政体、根本政治制度 :: 人民代表大会制度
+	- 基本政治制度 :: 政党制度、民族区域自治制度、基层群众自治制度
+- 我国国家治理一切工作和活动都是按照中特制度展开，我国国家治理体系和治理能力是中特制度及其执行能力的集中体现
+中特制度和国家治理体系，以马克思主义为指导，具有深厚中华文化根基，深得人民拥护，具有强大生命力和巨大优越性
+- 两个一百年
+  - 建党一百年 :: 全面建成小康社会
+  - 建国一百年 :: 2035年基本实现社会主义现代化
+- 目标 :: 本世纪中叶，建成富强民主文明和谐美丽的社会主义现代化强国
+**** 国家制度和国家治理体系显著优势
+1. 坚持党的集中统一领导，坚持党的科学理论，保持政治稳定，确保国家始终沿着社会主义方向前进的显著优势
+2. 坚持人民当家作主，发展人民民主，密切联系群众，仅仅依靠人民推动国家发展的显著优势
+   - 党的三大优良作风 :: 理论联系实际、密切联系群众、批评与自我批评
+   - 马哲群众史观：人民群众是推动社会变革的根本力量
+3. 坚持全面依法治国，建设社会主义法治国家，切实保障社会公平正义和人民权利的显著优势
+4. 坚持全国一盘棋，调动各方面积极性，集中力量办大事的显著优势
+5. 坚持各民族一律平等，筑牢中华民族共同体意识，实现共同团结奋斗，共同繁荣发展的显著优势
+   - 外交中强调：推动构建人类命运共同体
+6. 坚持公有制为主体、多种所有制经济共同发展和按劳分配为主体、多种分配方式并存，把社会主义制度和市场经济有机结合起来，不断解放和发展社会生产力的显著优势
+   - 党的十四大提出建立社会主义市场经济体制
+   - 中特根本任务是解放和发展社会生产力
+   - 基本经济制度和分配制度
+7. 坚持共同的理想信念、价值理念、道德观念
+8. 坚持以人民为中心的发展思想，不断保障和改善民生、增进人民福祉，走共同富裕道路的显著优势
+   - 基本实现共同富裕：本世纪中叶
+9. 坚持改革创新、与时俱进、善于自我完善、自我发展的显著优势
+10. 坚持德才兼备、选贤任能，聚天下英才而用之
+11. 坚持党指挥枪，确保人民军队绝对忠诚于党和人民
+12. 坚持一国两制，确保港澳长期繁荣稳定
+13. 坚持独立自主和对外开放相统一，积极参与全球治理，为构建人类命运共同体不断作出贡献的显著优势
+**** 坚持和完善中特制度、推进国家治理体系和治理能力现代化
+***** 总目标
+- 建党一百年 :: 在各方面制度更加成熟更加定型上取得明显成效
+- 到2035年 :: 各方面制度更加完善，基本实现国家治理体系和治理能力现代化
+- 到建国100年 :: 全面实现国家治理体系和治理能力现代化，使中特制度更加巩固、优越性充分展现
+***** 未来部署
+- 是全党重大战略任务
+****** 具体内容
+1. 坚持和完善党的领导制度体系，提高党科学执政、民主执政、依法执政水平
+2. 坚持和完善人民当家作主制度体系，发展社会主义民主政治。必须坚持人民主体地位
+3. 坚持和完善中特法治体系
+4. 坚持和完善中特行政体系，构建职责明确、依法行政的政府治理体系。
+   - 职责明确、依法行政
+   - 国家行政管理职责 :: 推动经济社会发展，管理社会事务，服务人民群众
+   - 坚持行政机关 :: 为人民服务、对人民负责、受人民监督
+   - 目标 :: 建设人民满意的服务型政府
+5. 坚持和完善社会主义基本经济制度，推动经济高质量发展。
+   - 巩固和发展公有制经济
+   - 鼓励、支持、引导非公有制经济发展
+   -按劳分配为主体、多种分配方式并存
+6. 坚持和完善繁荣发展社会主义先进文化的制度，巩固全体人民团结奋斗的共同思想基础
+   - 坚持马克思主义在意识形态领域指导地位的根本制度
+   - 坚持社会主义核心价值观引领文化制度建设
+     - 国家：富强民主文明和谐
+     - 社会：自由平等公正法治
+     - 公民：爱国敬业诚信友善
+     - 社会主义核心价值体系
+       - 马克思主义指导思想是灵魂
+       - 中国特色社会主义共同理想是主题
+       - 以爱国主义为核心的民族精神和以改革创新为核心的时代精神是精髓
+       - 社会主义荣辱观是基础
+     - 健全人民文化权益保障制度
+     - 完善坚持正确导向的舆论引导工作机制
+     - 文化创作生产体制机制
+       - 社会效益放在首位
+       - 社会效益和经济效益相统一
+7. 坚持和完善统筹城乡的民生保障制度，满足人民日益增长的美好生活需要
+   - 国家基本公共服务制度体系
+     - 幼有所育
+     - 学有所教
+     - 劳有所得
+     - 病有所医
+     - 老有所养
+     - 住有所居
+     - 弱有所扶
+   - 民生建设注重
+     - 普惠性
+     - 基础性
+     - 兜底性
+   - 保障群众基本生活
+8. 坚持和完善共建共治共享的社会治理制度，保持社会稳定、维护国家安全
+   - 社会治理体系 :: 党委领导、政府负责、民主协商、社会协同
+   - 社会治理格局：共建共治共享
+9. 坚持和完善生态文明制度体系，促进人与自然和谐共生
+   - 践行两座山理念
+   - 基本国策 :: 节约资源和保护环境
+   - 方针 :: 节约优先、保护优先、自然恢复
+10. 坚持和完善党对人民军队的绝对领导，确保人民军队忠实履行新时代使命任务
+11. 坚持和完善“一国两制”制度体系，推进祖国和平统一
+    - 严格按照宪法和基本法对港澳实行管制
+11. 坚持和完善独立自主和平外交政策，推动构建人类命运共同体
+    - 统筹国内国际两个大局
+		- 高举 *和平、发展、合作、共赢* 的旗帜
+    - 坚定不移维护国家主权、安全和发展利益
+    - 外交政策宗旨 :: 维护世界和平、促进共同发展
+12. 坚持和完善党和国家监督体系，强化对权力运行的制约和监督
+    - 监督体系
+      - 统一领导
+      - 全面覆盖
+      - 权威高效
+	  - 构建 *不敢腐、不能腐、不想腐* 的机制体制
+***** 贯彻落实总体要求
+党委政府、领导干部强化制度意识，带头维护制度权威，做制度执行的表率。带动社会
+- 自觉尊崇制度
+- 严格执行制度
+- 坚决维护制度
+- 推动广大干部严格按照制度履行职责、行使权力、开展工作
+*** 2019年中央经济工作会议
+**** 总结2019经济工作
+***** 2019年经济工作总体情况
+- 三大攻坚战（防范化解重大风险、精准脱贫、污染防治）取得关键进展
+***** 做好新形势下经济工作的重要认识
+- 成绩取得的根本原因：坚持党中央集中统一领导
+- 工作总基调：稳中求进
+**** 分析当前经济形势 
+**** 部署2020年经济工作
+- 总体要求
+- 六项重点工作
+*** 2019中央农村工作会议
+**** 概述
+2019.12.20-2019.12.21，讨论《中共中央、国务院关于抓好“三农”领域重点工作确保如期实现全面小康的意见（讨论稿）》
+**** 当前三农工作面临的形势和任务
+**** 研究部署2020年三农工作
+** 习近平重要讲话
+*** 2020年新年讲话
+**** 一句话总结2019
+**** 2019我国取得了哪些成就
+**** 2019最难忘的是隆重庆祝新中国成立70周年
+**** 2019年为谁而感动
+**** 2019年中国外交大事
+**** 2020年是具有里程碑意义的一年
+**** 2019年为谁而欣慰
+*** 在澳门考察并出席庆祝澳门回归20周年大会
+**** 肯定澳门回归20年来的发展
+**** 对澳门回归20年来的三点总结
+**** 一国两制成功实践的四点经验
+**** 四点希望
+**** 重要宣示
+**** 坚信做到三个更好
+*** 第二届中国国际进口博览会开幕式上的主旨演讲
+**** 首届进博会期间达成事项的落实
+**** 促进世界经济发展的三点倡议
+**** 继续扩大对外开放的五项措施
 * 习思想
+** 习思想及其历史地位基本概念
+*** 基本概念
+- 地位 :: 新时代中国共产党的思想旗帜，国家政治生活和社会生活的根本指针，当代中国马克思主义、二十一世纪马克思主义
+- 学习和理解习思想的金钥匙 :: 为人民谋幸福、为民族谋复兴、为世界谋大同
+- 活的灵魂 :: 解放思想实事求是与时俱进
+- 根本目的 :: 指导实践、推动工作
+- 四个意识
+- 四个自信
+- 两个维护
+*** 中特进入新时代
++ 主要矛盾变化 :: 十九大提出，人民日益增长的美好生活需求和不平衡不充分的发展之间的矛盾
++ 国情没有变 :: 我国正处于并将长期处于社会主义初级阶段
++ 国际地位没有变 :: 我国是世界上最大的发展中国家
++ 新的历史方位 :: 中国特色社会主义进入了新时代
++ 意义 :: 中国人民迎来了从站起来、富起来到强起来的伟大飞跃
++ 什么样的新时代
+  - 全面建成小康社会进而全面建设社会主义现代化强国
+  - 实现全体人民共同富裕的新时代
+  - 实现中华民族伟大复兴的中国梦的新时代
+  - 中国不断走进世界舞台中央，为世界人民做贡献的新时代
+  - 夺取中国特色社会主义伟大胜利的新时代
++ 十八大后进入新时代
+*** 主要内容
+- 习思想的核心要义 :: *坚持和发展中国特色社会主义* ，也是改革开放以来我们党全部理论和实践的鲜明主题
+**** 丰富内涵（八个明确）
+~最重要、最核心的内容，回答新时代坚持和发展什么样的中国特色社会主义的问题~
+1. 明确坚持和发展中国特色社会主义，总任务是实现社会主义现代化和中华民族伟大复兴，在全面建成小康社会的基础上，分两步走在本世纪中叶建成富强民主文明和谐美丽的社会主义现代化强国
+2. 明确新时代我国社会主要矛盾是人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾，必须坚持以人民为中心的发展思想，不断促进人的全面发展、全体人民共同富裕
+以人民为中心
+3. 明确中国特色社会主义事业总体布局是五位一体、战略布局是四个全面，强调鉴定道路自信、理论自信、制度自信、文化自信
+五位一体和四个全面
+4. 明确全面深化改革总目标是完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化
+完善中特制度
+5. 明确全面推进依法治国总目标是建设中国特色社会主义法治体系、建设社会主义法治国家
+6. 明确党在新时代的强军目标是建设一支听党指挥能打胜仗作风优良的人民军队，把人民军队建设成为世界一流军队
+7. 明确中国特色大国外交要推动构建新型国际关系，推动构建人类命运共同体
+8. 明确中国特色社会主义最本质的特征是中国共产党领导，中国特色社会主义制度的最大优势是中国共产党领导，党是最高政治领导力量，提出新世代党的建设总要求，突出政治建设在党的建设中的重要地位。
+**** 基本方略（十四个坚持）
+1. 坚持党对一切工作的领导
+2. 坚持以人民为中心
+人民是决定党和国家前途命运的根本力量
+3. 坚持全面深化改革
+4. 坚持新发展理念
+5. 坚持人民当家做主
+6. 坚持全面依法治国
+7. 坚持社会主义核心价值体系
+文化自信是一个国家、一个民族发展中更基本、更深沉、更持久的力量
+8. 坚持在发展中保障和改善民生
+9. 坚持人与自然和谐共生
+10. 坚持总体国家安全观
+11. 坚持党对人民军队绝对领导
+12. 坚持一国两制和推进祖国统一
+13. 坚持推动构建人类命运共同体
+14. 坚持全面从严治党
+~两个主体：1、2  三个全面：3、6、14  四个条件：10、11、12、13  五位一体：4、5、7、8、9~
+**** 历史地位
+~十九大把习思想确立为党的指导思想，十三届人大一次会议（2018年）将入宪~
+- 马克思主义中国化的最新成果
+- 中国特色社会主义理论体系的重要组成部分
+- 党和国家必须长期坚持的指导思想
+- 新时代党和人民共同奋斗的精神旗帜
+- 实现中华民族伟大复兴的行动指南
+**** 实战易错点 :note:
+** 坚持和发展中特的总任务
+总任务：实现中华民族伟大复兴和社会主义现代化
+*** 实现中华民族伟大复兴的中国梦
+**** 中国梦的提出
+2012年11月29日，参观《复兴之路》展览时提出，“实现中华民族伟大复兴，就是中华民族近代以来最伟大的梦想”
+**** 中国梦的科学内涵
+中国梦的本质是国家富强、民族振兴、人民幸福
+**** 中国梦的具体定位
+- 国家情怀、民族情怀、人民情怀相统一的梦
+- 归根到底是人民的梦
+- 国家的梦、民族的梦，也是每一个中国人的梦
+- 是与世界各国人民的美好梦想息息相通
+**** 中国梦的实现途径
+- 走中国道路-中国特色社会主义道路
+- 弘扬中国精神-以爱国主义为核心的民族精神和以改革开放为核心的时代精神（兴国之魂、强国之魂）
+- 凝聚中国力量-全国各族人民大团结的力量
+*** 建成社会主义现代化强国的战略安排
+1. 从2020年到2035年，在全面建成小康社会的基础上，再奋斗15年，基本实现社会主义现代化
+2. 从2035年到本世纪中叶，在基本实现社会主义现代化的基础上，再奋斗15年，建成富强民主文明和谐美丽的社会主义现代化强国
+**** 两个一百年奋斗目标
+- 建党一百年 :: 全面建成小康社会
+- 建国一百年 :: 全面建成富强民主文明和谐美丽的社会主义现代化强国
+** 五位一体总体布局
+*** 建设现代化经济体系
+**** 背景
+我国经济由 *高速增长阶段转向高质量发展* 阶段，处在 *转变发展方式、优化经济结构、转换增长动力* 的公关期
+**** 贯彻新发展理念
+十八届五中全会坚持以人民为中心发展思想，提出新发展理念
+***** 创新是引领发展的第一动力 --- 解决发展动力问题
+要把全更新摆在国家发展全局的核心位置
+***** 协调是持续健康发展的内在要求 --- 解决发展不平衡问题
+***** 绿色是永续发展的必要条件 --- 解决人与自然和谐问题
+***** 开放是国家繁荣发展的必由之路 --- 解决内外联动问题
+***** 共享是中国特色社会主义的本质要求 --- 解决社会公平正义问题
+**** 建设现代化经济体系的主要任务
+***** 现代化经济体系内容
+1. 产业体系 -- 创新引领、协同发展
+2. 市场体系 -- 统一开放、竞争有序
+3. 分配体系 -- 体现效率、促进公平
+4. 城乡区域发展体系 -- 彰显优势、协调联动
+5. 绿色发展体系 -- 资源节约、环境友好
+6. 全面开放体系 -- 多元平衡、安全高效
+***** 建设现代化经济体系的措施
+- 大力发展实体经济
+- 加快实施创新驱动发展战略
+- 激发各类市场主体活力
+- 积极推动城乡区域协调发展
+- 着力发展开放型经济
+- 加快完善社会主义市场经济体制
+***** 深化供给侧结构性改革
+坚持质量第一、效益优先，以供给侧改革为主线，推动经济发展质量变革、效率变革、动力变革，提高全要素生产率
+****** 内容
+- 推进增长动能转换，以加快发展先进制造业为重点全面提升 *实体经济*
+- 深化要素市场化配置改革，实现由以价取胜向以质取胜的转变
+- 加大人力资本培育力度，更加注重调动和保护人的积极性
+- 持续推进“三去一降一补”（去产能、去库存、去杠杆、降成本、补短板），优化市场供求结构
+- 深化供给侧结构性改革、推动经济高质量发展，总要求是八字方针： *巩固、增强、提升、畅通*
+*** 发展社会主义民主政治
+**** 坚持中国特色社会主义政治发展道路
+***** 坚持党的领导（根本保证）、人民当家作主（本质特征）、依法治国（基本方式）有机统一
+***** 坚持正确政治方向
+***** 深化党的国家机构改革
+十九届三中全会通过《中共中央关于深化党和国家机构改革的决定》
+- 党和国家机构职能体系 :: 系统完备、科学规范、运行高效
+- 党的领导体系 :: 总揽全局、协调各方
+- 政府治理体系 :: 职责明确、依法行政
+- 武装力量体系 :: 中国特色、世界一流
+- 群团工作体系 :: 联系广泛、服务群众
+			人民民主是社会主义的生命
+**** 健全人民当家作主的制度体系
+我国国体：工人阶级领导的、以工农联盟为基础的人民民主专政的社会主义国家
+***** 人民代表大会制度
+******* 地位
+- 根本政治制度
+- 人民当家作主的根本途径和最高实现形式
+- 党在国家政权中充分发扬民主、贯彻群众路线的最好实现形式
+******* 实质
+- 人民当家作主、一切权力属于人民
+***** 基本政治制度
+****** 政党制度 --- 中国共产党领导的多党合作和政治协商制度
+- 政党关系 :: 中国共产党是执政党，各民主党派是参政党
+- 首要前提和根本保证 :: 坚持中国共产党的领导和坚持四项基本原则
+- 基本方针 :: 长期共存、互相监督、肝胆相照、荣辱与共
+- 根本活动准则 ::	宪法和法律
+- 政党制度的专门机构 :: 中国人民政治协商会议
+******* 政治协商会议
+- 性质 :: 中国共产党和各民主党派合作的组织形式，社会主义协商民主的重要渠道和专门机构
+- 主题 :: 团结和民主
+- 职能 :: 政治协商、民主监督、参政议政
+****** 民族区域自治制度
+- 核心 :: 保障少数民族当家作主，管理本民族、本地方事务的权利
+- 民族团结是我国各族人民的生命线
+- 关键是要搞好民族团结
+- 发展是解决民族地区各种问题的总钥匙
+****** 基层群众自治制度
+- 地位 :: 社会主义民主政治建设的基础
+- 内容 :: 自我管理、自我服务、自我教育、自我监督
+***** 社会主义协商民主
+协商民主是中国特色社会主义民主政治的特有形式和独特优势，是实现党的领导的重要方式
+**** 巩固和发展爱国统一战线
+***** 基本概念
+- 统一战线是党的事业取得胜利的重要法宝
+- 是党领导的统一战线
+- 根本是要坚持党的领导，构建党委统一领导的大统战工作格局
+- 党的领导主要是政治领导 :: 政治原则、政治方向、重大方针政策
+- 党的领导体现为党委领导而不是部门领导、集体领导而不是个人领导
+***** 组成
+- 全体社会主义劳动者
+- 社会主义事业建设者
+- 拥护社会主义的爱国者
+- 拥护祖国统一和致力于中华民族伟大复兴的爱国者
+***** 本质要求（主题）
+大团结大联合
+***** 旗帜 -- 爱国主义、社会主义
+**** 坚持一国两制，推进祖国统一
+- 关系 :: 一国是两制的前提和基础、两制是一国的从属和派生
+- 政治基础 :: 一个中国原则
+- 两岸关系和平发展的关键 :: 九二共识
+- 台独势力 :: 两岸关系和平发展的最大障碍、台海和平稳定的最大威胁
+- 理念 :: 两岸一家亲
+*** 推动社会主义文化繁荣兴盛
+**** 牢牢把握意识形态工作领导权
+意识形态关乎旗帜、关乎道路、关乎国家政治安全，决定文化前进方向和道路
++ 要求
+  - 坚持马克思主义指导地位
+  - 构建中国特色哲学社会科学
+  - 坚持正确舆论导向
+  - 建设好网络空间
+  - 落实好意识形态工作责任制
+**** 培育和践行社会主义核心价值观
+- 立足中华优秀传统文化和革命文化
+- 发扬中国人民的伟大民族精神 :: 伟大创造精神、伟大奋斗精神、伟大团结精神、伟大梦想精神
+**** 坚定文化自信，建设社会主义文化强国
+- 文化是一个国家、一个民族的灵魂，是人民的精神家园，也是政党的精神旗帜
+- 深化文化体制改革导向 :: 以人民为中心
+- 文化体制机制 :: 社会效益放在首位、社会效益和经济效益相统一
+*** 坚持在发展中保障和改善民生
+**** 提高保障和改善民生水平
+- 教育 :: 建设教育强国是中华民族伟大复兴的基础工程，必须摆在优先位置
+- 就业 :: 就业是最大的民生
+- 多层次社会保障体系 :: 覆盖全民、城乡统筹、权责清晰、保障适度、可持续
+- 住房制度 :: 多主体供给、多渠道保障、租购并举
+***** 脱贫攻坚
+- 根本方针 :: 精准扶贫、精准脱贫
+- 三位一体大扶贫格局
+专项扶贫、行业扶贫、社会扶贫
+- 工作机制
+中央统筹、省负总责、市县抓落实
+- 责任制
+党政一把手负总责
+- 重点
+功课深度贫困地区脱贫任务
+- 目标
+到2020年现行标准下农村贫困人口实现脱贫，贫困县全部摘帽，解决区域性整体贫困，做到脱真贫、真脱贫
+**** 加强和创新社会治理方式
+***** 创新社会治理体制
+- 社会治理体制 :: 党委领导、政府负责、民主协商、社会协同、公众参与、法治保障、科技支撑
+- 社会治理格局 :: 共建共治共享
+***** 改进社会治理方式
+系统治理、依法治理、源头治理、综合治理
+***** 加强预防和化解社会矛盾机制建设
+***** 加强社会心理服务体系建设
+培育自尊自信、理性平和、积极向上的社会心态
+***** 加强社区治理体系建设
+社区是党和政府练习、服务群众的最后一公里，是社会治理的重心
+**** 总体国家安全观
+- 国家利益 :: 至上
+- 人民安全 :: 宗旨
+- 政治安全 :: 根本
+- 军事、文化、社会安全 :: 保障
+- 促进国际安全 :: 依托
+*** 建设美丽中国
+**** 生态文明的核心
+- 人与自然和谐共生
+- 两座山理论 :: 绿水青山就是金山银山
+**** 人与自然和谐发展新格局
+- 首位 :: 节约资源
+- 着力推进 :: 绿色发展、循环发展、低碳发展
+- 目标 :: 形成节约资源和保护环境的空间格局、产业结构、生产方式、生活方式
+**** 加快生态文明体制改革
+- 蓝天保卫战 :: 全民共治、源头防治
+- 三条控制线 :: 生态保护红线、永久基本农田、城镇开发边界
+- 设立国有自然资源资产管理和自然生态监管机构
+** 四个全面战略布局
+*** 全面建成小康社会
+**** 经济目标
+国内生产总值和城乡居民人均收入均比2010年翻一番
+**** 实施七大战略
+- 科教兴国
+- 人才强国
+- 创新驱动发展
+- 乡村振兴
+- 区域协调发展
+- 可持续发展
+- 军民融合发展
+**** 决胜期
+从现在到2020年是全面建成小康社会决胜期
+**** 三大攻坚战
+- 防范化解重大风险攻坚战
+- 精准脱贫攻坚战
+- 污染防治攻坚战
+*** 全面深化改革
+**** 要求
+- 坚持党对改革的集中统一领导
+- 坚持改革沿着中国特色社会主义方向前进
+- 坚持改革往有利于维护社会公平正义、增进人民福祉方向前进
+出发点和落脚点
+- 坚持社会主义市场经济改革方向
+**** 总目标
+- 完善和发展中国特色社会主义制度（根本方向），推进国家治理体系和治理能力现代化（实现途径）
+**** 处理重大关系
+- 解放思想和实事求是
+- 顶层设计和摸着石头过河
+- 整体推进和重点突破
+- 胆子要大和步子要稳
+- 改革、发展、稳定
+改革是经济社会发展的强大动力
+发展是解决一切经济社会问题的关键
+稳定是改革发展的前提
+*** 全面依法治国
+**** 形成发展
+- 1997年，十五大把依法治国确立为治理国家的基本方略
+- 1999年3月，九届全国人大二次会议将“依法治国”写入宪法
+- 十八届四中全会提出全面依法治国，开始中国特色社会主义法治道路的新征程
+- 十九大明确提出，全面依法治国是中国特色社会主义的本质要求和重要保障
+**** 中国特色社会主义法治道路
+- 坚持中国共产党的领导
+- 坚持人民再全面依法治国中的主体地位
+- 坚持法律面前人人平等
+- 坚持依法治国和以德治国相结合
+- 坚持从中国实际出发
+**** 重点任务
+- 推进中国特色社会主义法治体系建设
+- 十六字方针 :: 科学立法、严格执法、公正司法、公民守法
+*** 全面从严治党
+**** 		新时代党的建设总要求
+***** 目的
+坚持和加强党的全面领导
+***** 方针
+- 坚持党要管党、全面从严治党
+- 全面是基础、严是关键、治是要害
+***** 统领
+党的政治建设
+***** 主线
+加强党的长期执政能力建设
+加强先进性和纯洁性建设
+***** 根基
+坚定理想信念宗旨
+***** 着力点
+调动全党积极性、主动性、创造性
+***** 总体布局
+全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设
+把制度建设贯穿其中
+深入推进反腐败斗争
+***** 目标
+始终走在时代前列、人民诚心拥护、用于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党
+**** 把党的政治建设摆在首位
+***** 地位
+首位
+***** 重要性
+旗帜鲜明讲政治是我们党作为马克思主义政党的根本要求
+党的政治建设是党的根本性建设，决定党的建设方向和效果
+***** 基本内容
+- 首要任务
+保证全党服从中央
+坚持党中央权威和集中统一领导
+- 尊崇党章，增强党内政治生活的政治性、时代性、原则性、战斗性
+- 根本政治担当
+对党忠诚
+为党分忧
+为党尽职
+为民造福
+**** 全面从严治党永远在路上
+***** 加强党的思想建设
+****** 地位
+基础性建设
+****** 首要任务
+- 坚定理想信念
+共产主义远大理想（精神支柱和政治灵魂）
+中国特色社会主义共同理想
+***** 加强党的组织建设
+****** 内容
+- 民主集中制建设
+- 党的基层组织建设 -- 战斗堡垒作用
+- 干部队伍建设
+- 党员队伍建设
+****** 好干部标准
+- 信念坚定
+- 为民服务
+- 勤政务实
+- 敢于担当
+- 清正廉洁
+***** 持之以恒正风肃纪
+- 核心 :: 保持党和人民群众的血肉联系
+- 最大政治优势 :: 密切联系群众
+- 党风问题、党同人民群众联系问题是关系党生死存亡的问题
+- 四风 :: 享乐主义、形式主义、官僚主义、奢靡之风
+- 纪律严明是党的光荣传统和独特优势
+***** 将制度建设贯穿党的各项建设之中（长远之策、根本之策）
+以党章为根本依据
+***** 反腐败斗争（重中之重）
+- 腐败是我们党面临的最大威胁
+- 坚持无禁区、全覆盖、零容忍
+- 坚持重遏制、强高压、长震慑
+- 组建国家、省、市、县监察委员会
+** 全面推进国防和军队现代化
+*** 坚持走中国特色强军之路
+**** 习近平强军思想
+- 回答课题
+新时代建设一支什么样的强大人民军队、怎样建设强大人民军队
+- 强军目标
+建设一支听党指挥能打胜仗作风优良的人民军队，把人民军队建设成为世界一流军队
+**** 坚持党对人民军队的绝对领导
+***** 地位
+- 是中国特色社会主义的本质特征
+- 是人民军队战无不胜的根本保证
+- 是区别于一切旧军队的政治特质和根本优势
+- 是人民军队本质和宗旨的根本保障
+***** 领导方式
+- 唯一的独立的领导，是直接领导、直接指挥，是包括政治领导、思想领导、组织领导在内的全面领导
+***** 最高实现形式
+军委主席负责制
+***** 党领导军队的根本制度
+党委统一领导下的首长分工负责制
+**** 建设世界一流军队
+***** 全面推进国防和军队现代化的战略安排
+- 2020年，基本实现机械化
+- 2035年，基本实现国防和军队现代化
+- 本世纪中叶，全面建成世界一流军队
+***** 要求
+- 战斗力是唯一标准
+- 政治建军是立军之本
+- 改革强军是关键一招
+- 科技兴军是核心战斗力
+- 依法治军是基本方略
+- 人才强军在给硬骨头六连的回信中提出
+- 四铁 -- 铁一般信仰、铁一般信念、铁一般纪律、铁一般担当
+- 四有 -- 有灵魂、有本事、有血性、有品德
+*** 推动军民融合深度发展
+** 中国特色大国外交
+*** 坚持和平发展道路
+**** 独立自主和平外交政策
+- 时代潮流 :: 和平、发展、合作、共赢
+- 外交政策宗旨 :: 维护世界和平、促进共同发展
+- 国家主权和安全是第一位的
+**** 推动建立新型国际关系
+- 新型国际关系 :: 相互尊重、公平正义、合作共赢
+- 外交工作的出发点和落脚点 :: 维护国家主权、安全和发展利益
+- 外交工作布局
+大国是关键
+周边是首要
+发展中国家是基础
+多边是舞台
+- 全球治理观 :: 共商共建共享
+*** 构建人类命运共同体
+**** 内涵
+- 核心 :: 建设持久和平、普遍安全、共同繁荣、开放包容、情节美丽的世界
+- 政治上 :: 构建平等互待、互商互谅、互学互鉴的伙伴关系
+- 安全上 :: 树立共同、综合、合作、可持续的新安全观
+- 经济上 :: 推动建设开放型世界经济
+- 文化上 :: 尊重世界文明多样性
+- 生态上 :: 构筑尊崇自然、绿色发展的全球生态体系
+**** 促进“一带一路”国际合作
+***** 全称 --- 丝绸之路经济带和21世纪海上丝绸之路
+***** 理念（丝路精神）
+和平合作、开放包容、互学互鉴、互利共赢
+***** 利益共同体、命运共同体和责任共同体
+- 政治互信
+- 经济融合
+- 文化包容
+***** 主要内容
+- 政策沟通
+- 设施联通
+- 贸易畅通
+- 资金融通
+- 民心相通
+***** 原则
+共商共建共享
+***** 目标
+- 和平之路
+- 繁荣之路
+- 开放之路
+- 创新之路
+- 文明之路
+**** 共商共建人类命运共同体
+| 旗帜               | 和平发展合作共赢                 |
+| 基础               | 和平共处五项原则                 |
+| 大国关系框架       | 总体稳定、均衡发展               |
+| 周边外交理念       | 亲诚惠容                         |
+| 周边外交方针       | 与邻为善、以邻为伴               |
+| 国际秩序和国际关系 | 以《联合国宪章》宗旨和原则为核心 |
+** 坚持和加强党的领导
+*** 实现中华民族伟大复兴关键在党
+**** 中国共产党的性质
++ 两个先锋队
+  - 中国工人阶级的先锋队
+  - 中国人民和中华民族的先锋队
++ 一个核心
+  - 中国特色社会主义事业的领导核心
++ 三个代表
+  - 代表中国先进生产力的发展要求
+  - 代表中国先进文化的前进方向
+  - 代表中国最广大人民的根本利益
+**** 中国特色社会主义最本质的特征
++ 党的领导是中国特色社会主义最本质的特征
+  - 理论逻辑：科学社会主义
+  - 历史逻辑：中国特色社会主义产生与发展
+  - 实践逻辑：中国特色社会主义迈向新征程
++ 党的领导是中国特色社会主义制度的最大优势
+  - 理论优势：以马克思主义为指导
+  - 政治优势：坚定崇高的政治理想、政治信念和百折不挠的革命意志
+  - 组织优势：严密组织体系、严格组织生活、严明组织记录
+  - 制度优势：坚持民主集中制
+  - 密切联系群众优势
+**** 新时代中国共产党的历史使命
+- 实现中华民族伟大复兴
+- 伟大梦想（目标） :: 实现中华民族伟大复兴
+- 伟大工程（保障） :: 党的建设（决定性作用）
+- 伟大事业（主题） :: 中国特色社会主义事业
+- 伟大斗争（手段）
+*** 坚持党对一切工作的领导
++ 党是最高政治领导力量
++ 确保党始终总揽全局协调各方的领导核心地位
++ 增强四个意识
+政治意识
+大局意识
+核心意识
+看齐意识
++ 全面增强党的执政本领
+  - 提高把方向、谋大局、定政策、促改革的能力
+  - 提高保持政治定力、驾驭政治局面、防范政治风险的能力
+  - 坚持战略思维、创新思维、辩证思维、法治思维、底线思维
 * 马克思主义哲学
 + 组成
   + 辩证唯物主义
@@ -940,23 +1593,23 @@
 - 丧失国籍的
 - 被剥夺政治权利的
 - 丧失行动能力的
-***** 基层群众自治制度
+**** 基层群众自治制度
 自我管理、自我教育、自我服务的社会组织
-****** 村民委员会
+***** 村民委员会
 - 组成 :: 主任、副主任、委员共三至七人，年满18岁未被剥夺政治权利的村民直接选举产生，应有妇女成员，多民族村应有人数较少的民族成员
 - 任期 :: 每届5年，可连选连任。村委工作成员可以发补贴
-****** 居民委员会
+***** 居民委员会
 - 组成 :: 主任、副主任、委员共五至九人，可由居民选举产生，也可由每户派代表选举产生，还可由每个居民小组选举代表二至三人选举产生
 - 任期 :: 每届5年，可连选连任
-****** 基层组织
+***** 基层组织
 - 基层群众组织 --- 村委会、居委会
 - 基层工人组织 --- 工会
-***** 民族区域自治制度
+**** 民族区域自治制度
 - 民族自治的地方 :: 自治区、自治州、自治县（省市县）
 - 自治机关 :: 民族自治地方的人大和政府
 - 领导担任 :: 行政一把手（主席、州长、县长），必须本民族公民；人常，主任或者副主任有本族公民即可
 - 权力 :: 自治权、立法权（自治法规－自治条理、单行条例）、变通权执行权、财政自治权、治安权（可以自行组建治安机关）、科教文卫自治权
-***** 特别行政区制度
+**** 特别行政区制度
 + 特别行政区是中国不可分割的部分，是一个直辖于中央人民政府的地方行政区域，由 *全国人大* 授权实行高度自治
 + 特区政府享有高度自治权
   - 立法权。特区立法机关制定的法律须报全人常备案， *备案不影响生效*
@@ -966,12 +1619,12 @@
   - 对外交往权。中央人民政府可授权特区依照基本法自行处理对外事务（经济、文化交往权，也叫外事权）
   - 管理权。自行维护社会治安
   - 不享有 *外交权* 和 *防务权（国防）*
-***** 国家经济制度
-****** 基本经济制度
-******* 社会主义市场经济体制
+**** 国家经济制度
+***** 基本经济制度
+****** 社会主义市场经济体制
 - 经济体制即国家的经济管理体制
 - 发展社会主义市场经济是一项重要的国家任务
-******* 公有制为主体、多种所有制经济共同发展
+****** 公有制为主体、多种所有制经济共同发展
 + 公有制经济
   - 国有经济，社会主义 *全民所有* 制经济，国民经济的主导力量。国家保障国有经济的巩固和发展
   - 集体经济，国家保护城乡集体经济组织的合法的权利和权益， *鼓励、指导和帮助* 集体经济的发展
@@ -979,15 +1632,15 @@
   - 社会主义市场经济的重要组成部分
   - 国家保护个体经济、私营经济等非公有制经济的合法的权利和权益
   - 国家 *鼓励、支持和引导* 非公有制经济的发展，并对非公有制经济依法实行监督和管理
-******* 分配制度
+****** 分配制度
 按劳分配为主体，多种分配方式并存的分配制度
-****** 财产权制度
-******* 公共财产权（神圣不可侵犯）
+***** 财产权制度
+****** 公共财产权（神圣不可侵犯）
 - 专属国家所有的 :: 矿藏、水流、海域、城市的土地、无线电频谱、国防资产
 - 专属集体所有的 :: 自留山、自留地、宅基地
 - 森林、山岭、草原、荒地、滩涂原则上属于国家所有，法律规定属于集体所有的除外
 - 农村和城市郊区的土地原则上属于集体，法律规定属于国家的除外 
-******* 私有财产权
+****** 私有财产权
 - 04宪法修正案规定：公民 *合法的* 私有财产不受侵犯
 - 国家依照法律保护公民的 *私有财产权* 和 *继承权*
 - 国家为了 *公共利益* 的需要，可以依照法律规定对公民私有财产实行征收或征用并给予 *补偿*
@@ -996,137 +1649,199 @@
 2. 政体=政权组织形式=权力如何行使=人民代表大会制度
 3. 中华人民共和国的一切权力属于人民
 4. *危害国家安全、无期徒刑、死刑* 的犯罪分子一定会被剥夺政治权利
-5. 公民合法的私有财产神圣不可侵犯（×）
+5. 公民合法的私有财产神圣不可侵犯（×） --- 公共财产权神圣不可侵犯
 *** 公民基本权利
 **** 平等权
 - 法律面前一律平等
-- 禁止差别对待
-- 允许合理差别
+- 禁止差别对待，但允许合理差别
+- 公民在守法、执法、司法上平等，在立法上不平等（公民≠人民）
 **** 政治权利和自由
 + 选举权和被选举权
   - 年满18周岁的中国公民
   - 被剥夺政治权利的除外
-+ 政治自由
++ 政治自由 --- 表达自己政治意愿的自由
   - 政治自由包括言论、出版、集会、结社、游行、示威等方面的自由
   - *言论自由* 在公民各项政治自由中居于 *首要地位*
-**** 宗教信仰自由
+**** 宗教信仰自由 --- 不等于政治自由
 - 实质是使宗教信仰问题成为公民个人的自由选择，成为公民的私事
+- 国家不能干涉信仰自由
+- 不能干涉正常宗教活动
+- 不受外界宗教干预
 **** 人身自由权
-+ 生命权
-  - 生命权属于广义的人身自由权
-+ 人身自由权
-  - 中华人民共和国公民的人身自由不受侵犯
-  - 任何公民，非经 *人民检察院* 批准或决定，或者 *人民法院* 决定，并由公安机关执行，不受逮捕；
-  - 禁止非法拘禁和以其他方法剥夺或限制公民的人身自由，禁止非法搜查公民的身体
-+ 人格尊严
-  - 人格尊严不受侵犯，禁止用任何方法对公民进行侮辱、诽谤和诬告陷害
-+ 住宅不受侵犯
-  - 禁止非法搜查或非法入侵公民的住宅
-  - 涉及公民的财产权、人身自由、居住安全和生活安定
-+ 通信自由和通信秘密
-  - 除因国家安全或追查刑事犯罪，公安机关或检察机关依法定程序可进行通信检查
-**** 监督权和获得赔偿权
-- 对国家机关和工作人员，有批评和建议的权利
-- 对国家机关和工作人员的违法失职行为，有向国家有关机关申诉、控告或检举的权利
+***** 生命权
+- 生命权属于广义的人身自由权，最高的人身自由权
+***** 人身自由权
+- 中华人民共公民的人身自由不受侵犯
+- 任何公民，非经 *人民检察院* 批准或决定，或者 *人民法院* 决定，并由公安机关执行，不受逮捕；
+- 禁止非法拘禁和以其他方法剥夺或限制公民的人身自由，禁止非法搜查公民的身体
+***** 人格尊严
+- 人格尊严不受侵犯，禁止用任何方法对公民进行侮辱、诽谤和诬告陷害
+***** 住宅不受侵犯
+- 禁止非法搜查或非法入侵公民的住宅
+- 涉及公民的财产权、人身自由、居住安全和生活安定
+***** 通信自由和通信秘密
+- 除因国家安全或追查刑事犯罪， *公安机关或检察机关* 依法定程序可进行通信检查（法院没有侦查权）
+**** 监督权（民监督官）和获得赔偿权
+- 对国家机关和工作人员，有 *批评和建议* 的权利
+- 对国家机关和工作人员的违法失职行为，有向国家有关机关 *申诉、控告或检举* 的权利
 - 对申诉、检举或者控告，有关国家机关必须查清事实，负责处理。任何人不得压制或打击报复
 - 有依法取得赔偿的权利
+**** 社会经济和文化权利
+- 劳动权 --- 权利也是义务
+- 受教育权 --- 权利也是义务
+- 劳动者的休息权 --- 主体是劳动者，而不是公民
+- 物质帮助权 --- 年老、疾病、丧失劳动能力
+- 其他文化权利和自由
+**** 知识拓展
+***** 公民义务
+- 遵守国家法律
+- 维护祖国统一和尊严
+- 劳动
+- 受教育
+- 服兵役
+- 计划生育
 **** 实战易错点 :note:
 1. 政治权利和自由：选举权和被选举权、政治自由
 2. 通信自由不属于公民的政治权利和自由
 3. 选举权和被选举权是我国公民享有的一项 *最基本的政治权利*
 4. 人身自由权是公民 *最基本的权利*
-5. 没有附加剥夺政治权利的罪犯在服刑期间可以行使选举权
-6. 政治自由不包括罢工自由
-7. 公民受自然灾害时，没有从国家和社会获得物质帮助的权利
-8. 财产权属于公民的社会经济权利
+5. 非法拘禁和非法搜身侵犯的是 *人身自由权*
+6. 没有附加剥夺政治权利的罪犯在服刑期间可以行使选举权
+7. 政治自由包括 *罢工自由* (×）
+8. 公民受自然灾害时，没有从国家和社会获得物质帮助的权利 --- 老、病、丧失劳动能力
+9. 财产权属于公民的社会经济权利
 *** 中央国家机关
-**** 全国人民代表大会
+**** 全国人大
 ***** 性质
 国家最高权力机关
 ***** 组成和任期
 - 省、自治区、直辖市、特别行政区和军队选出的代表组成
 - 各少数民族应当有适当名额的代表
-- 任期5年
+- 人代会每届任期5年
 ***** 会议召开
 - 全国人大每年召开一次，由全人常召集
 - 如果全人常认为有必要，或者有五分之一以上的全国人大代表提议，可以临时召集全国人大会议
 - 全国人大会议时，选举主席团主持会议
 ***** 全国人大的重要职权
-+ 修改宪法和监督宪法实施
-+ 制定和修改刑事、民事、国家机构和其他重要法律（立法权）
-+ 对国家机构组成人员的选举、决定和罢免
-  - 选举 :: 国家主席、副主席；军委主席；监察委主任、最高院院长、最高检检察长
-  - 决定
-    根据国家主席提名，决定总理人选
-    根据总理提名，决定副总理、国务委员、各部部长、各委员会主任、审计长、秘书长人选
-    根据军委主席提名，决定军委其他组成人员的人选
-+ 决定国家的重大事项
-  - 审查中央和地方预算草案及中央和地方执行情况的报告
-  - 审查和批准中央预算和中央预算执行情况的报告
-  - 改变或者撤销全人常关于预算、决算不适当的决议
-  - 审查和批准国民经济和社会发展计划以及计划执行情况的报告
-  - 批准省、自治区和直辖市的建置
-  - 决定特别行政区的设立及其制度
-  - 决定战争与和平的问题
-+ 最高监督权
-**** 全人常
+****** 修改宪法和监督宪法实施
+****** 制定和修改刑事、民事、国家机构和其他重要法律 --- 全人常有修改权
+****** 对国家机构组成人员的选举、决定和罢免
+- 选举 :: 国家主席、副主席、军委主席；监察委主任、全人常的组成成员；最高院院长、最高检检察长
+两委两院三主席 
+- 决定 --- 人大决定国务院
+  根据国家主席提名，人大决定总理人选
+  根据总理提名，人大决定副总理、国务委员、各部部长、各委员会主任、审计长、秘书长人选
+  根据军委主席提名，人大决定军委其他组成人员的人选
+****** 决定国家的重大事项
+******* 具体
+- 审查中央和地方预算草案及中央和地方执行情况的报告
+- 审查和批准中央预算和中央预算执行情况的报告
+- 改变或者撤销全人常关于预算、决算不适当的决议
+- 审查和批准国民经济和社会发展计划以及计划执行情况的报告 --- 国务院编制和执行
+- 批准省、自治区和直辖市的建置
+- 决定特别行政区的设立及其制度
+- 决定战争与和平的问题
+******* 记忆
+- 审计预算和国民经济发展计划
+- 省、自治区、直辖市的建置（建立、撤销、更名）
+- 特别行政区的设立及其制度
+- 决定战争与和平的问题
+****** 最高监督权
+**** 全国人常
 ***** 性质
 全人大的常设机关
 ***** 组成和任期
-+ 组成
-  - 委员长
-  - 副委员长若干
-  - 秘书长
-  - 委员若干人
-+ 组成人员中应当有适当名额的少数民族代表
-+ 组成人员不得担任国家行政、监察、审判和检察机关的职务
-+ 任期同全国人大任期相同
-+ 委员长、副委员长连续任职不得超过两届
+****** 组成
+- 委员长
+- 副委员长若干
+- 秘书长
+- 委员若干人
+****** 其他规定
+- 组成人员中应当有适当名额的少数民族代表
+- 组成人员不得担任国家行政、监察、审判和检察机关的职务 --- 全人常监督其他机关
+- 任期同全国人大任期相同
+- 委员长、副委员长连续任职不得超过两届
 ***** 重要职权
-- 立法权。制定和修改除全国人大制定的法律以外的法律
-- *解释宪法、监督宪法的实施*
-- 法律解释权。可以解释自己和人大制定的法律
-- 规范性文件的审查、监督权
-- 预算管理权 :: 人大闭会期间，审查和批准国民经济和社会发展计划、国家预算在执行过程中所必须作的 *部分调整方案*
-- 重大事务的决定权
-  决定特赦
-  决定全国或个别省、自治区、直辖市进入 *紧急状态*
-  决定驻外全权代表的任免
-  决定全国总动员或者局部动员
-  决定批准或者废除同外国缔结的条约和重要协定
-- 监督国家机关的工作。
-**** 国家主席
+****** 立法权。制定和修改除全国人大制定的法律以外的法律 --- 非基本法律
+****** 解释宪法、监督宪法的实施
+****** 法律解释权。可以解释自己和人大制定的法律
+****** 规范性文件的审查、监督权
+- 撤销国务院制定的行政法规 --- 不能修改，只能撤销
+- 撤销地方性法规
+****** 预算管理权
+- 人大闭会期间，审查和批准国民经济和社会发展计划、国家预算在执行过程中所必须作的 *部分调整方案*
+- 国务院编制和执行 *国民经济和社会发展计划*
+****** 重大事务的决定权
+- 决定特赦
+- 决定全国或个别省、自治区、直辖市进入 *紧急状态*
+- 决定驻外全权代表的任免
+- 决定全国总动员或者局部动员
+- 决定批准或者废除同外国缔结的条约和重要协定
+  1. 全人常 *决定* 同外国缔结或废除条约
+  2. 国务院管理对外事务，同外国缔结条约
+  3. 国家主席根据全人常决定， *批准* 和废除条约
+****** 监督国家机关的工作
+****** 勋章、荣誉勋章由全人常批准
+**** 国家主席（机关，包括主席、副主席）
 ***** 任职资格和任期
 - 任职资格 :: 有选举权和被选举权的 *年满四十五周岁* 的公民可以当选为国家主席、副主席
 - 任期 :: 同全国人大相同
-***** 重要职权
+***** 重要职权（宣布、任免等，但无决定权）
 - 公布法律、发布命令
-- 任免国务院组成人员和驻外全权代表
-- 外交权
+- 任免国务院组成人员（人大决定）和驻外全权代表（人常决定）
+- 外交权（04修正案，外事访问等）
 - 荣典权
 **** 国务院
 ***** 性质
 最高权力机关的执行机关，是国家最高行政机关
 ***** 组成和任期
-+ 组成
-  - 总理
-  - 副总理若干
-  - 国务委员若干
-  - 各部部长
-  - 各委员会主任
-  - 审计长
-  - 秘书长
-+ 任期
-  - 与人大任期相同
-  - 总理、副总理、国务委员连续任职不得超过两届
+****** 组成
+- 总理
+- 副总理若干
+- 国务委员若干
+- 各部部长
+- 各委员会主任
+- 审计长
+- 秘书长
+- 国务院常务会议 :: 总理、副总理、委员、秘书长
+****** 任期
+- 与人大任期相同
+- 总理、副总理、国务委员连续任职不得超过两届
 ***** 重要职权
-- 立法权
+- 立法权 --- 行政法规
 - 对国防、民政、文教、经济、生态文明建设等各项工作的领导权和管理权
 - 对外事务的管理权
 - 重大事项的决定权
-  批准省、自治区、直辖市的区域划分
-  批准自治州、县、自治县、市的建置和区域划分
-  依法决定省、自治区、直辖市的范围内部分地区进入紧急状态
+  1. 批准省、自治区、直辖市的区域划分
+  2. 批准自治州、县、自治县、市的建置和区域划分
+  3. 依法决定省、自治区、直辖市的范围内部分地区进入紧急状态
+- 建置区划口诀 :: 村找县，乡找省，县级以上国务院，全国人大批省建
+**** 国家机关对比
+| 名称     | 性质                 | 任期                        | 重要职权                                                  |
+|----------+----------------------+-----------------------------+-----------------------------------------------------------|
+| 全国人大 | 最高权力机关         | 全国人大代表大会每期任期5年 | 1. 修改宪法和监督宪法实施                                 |
+|          |                      |                             | 2. 对国家机构组成人员的选举、决定和罢免（选主席、定总理） |
+|          |                      |                             | 3. 立法权（基本）                                         |
+|          |                      |                             | 4. 决定权：批准省建置（全人大建，国务院划）               |
+|          |                      |                             | 5. 决定特别行政区的设立及其制度                           |
+|          |                      |                             | 6. 决定战争与和平的问题                                   |
+|----------+----------------------+-----------------------------+-----------------------------------------------------------|
+| 全国人常 | 全国人大常设机关     | 常委每届任期5年             | 1. 宪法和法律的解释权（监督宪法实施）                     |
+|          |                      | 委员长、副委员长2届         | 2. 立法权（非基本）                                       |
+|          |                      |                             | 3. 决定特赦                                               |
+|          |                      |                             | 4. 决定全国或省进入紧急状态                               |
+|          |                      |                             | 5. 决定驻外全权代表的任免                                 |
+|          |                      |                             | 6. 决定全国总动员或者局部动员                             |
+|          |                      |                             | 7. 决定战争状态的宣布                                     |
+|          |                      |                             | 8. 监察委、法院、检察院人事任免                           |
+|----------+----------------------+-----------------------------+-----------------------------------------------------------|
+| 国家主席 | 国家元首             | 主席副主席任期5年，45周岁   | 1. 公布法律、发布命令                                     |
+|          | 政府首脑是国务院总理 |                             | 2. 根据全国人大和全国人常的决定，宣布战争状态，发布动员令 |
+|          |                      |                             | 3. 行使宪法规定的国防方面的其他职权                       |
+|----------+----------------------+-----------------------------+-----------------------------------------------------------|
+| 国务院   | 最高国家行政机关     | 任期5年                     | 1. 立法权（行政法规）                                     |
+|          |                      |                             | 2. 批准省的划分                                           |
+|          |                      |                             | 3. 批准自治州、县、自治县、市的建置和区域划分             |
 **** 实战易错点 :note:
 1. 国家最高权力机关－－－全国人大
 2. 国家最高行政机关、最高权力机关的执行机关－－－国务院
