--- a/note.org
+++ b/note.org
@@ -1,5 +1,5 @@
 * 时事政治
-** 重要讲话
+** 重要会议
 *** 十九届四中全会
 1. 当今世界正经历百年未有之大变局，我国正处于实现中华民族伟大复兴 *关键时期*
 2. 习近平指出，当今世界正面临百年未有之大变局。对广大新兴市场国家和发展中国家而言，这个世界既充满给予，也存在挑战。我们既需要经济科技力量，也需要文化文明水平
@@ -113,3 +113,24 @@
     - 粤港澳
     - 黄河
     - 成渝双城
+*** 2019中央农村工作会议
+    2019年12月20日在北京召开，讨论了《中共中央、国务院关于抓好三农领域重点工作，确保如期实现小康社会的意见》
+**** 三农工作面临的形势和任务 
+     1. 2020年是全面建成小康社会 *收官之年*
+     2. 三农工作两大任务
+        - 坚决如期完成脱贫攻坚任务
+        - 坚决补上全面小康三农领域短板
+     3. 对标对表全面建成小康社会
+     4. 发挥好三农 *压舱石* 作用
+***** 全面建成小康社会
+***** 打赢脱贫攻坚战
+      1. 三农是 *党和国家工作* 的重中之重
+      2. 打赢脱贫攻坚战是 *全面建成小康社会* 的重中之重
+      3. 两不愁 --- 吃穿不愁；三保障 --- 教育、医疗、住房
+***** 保障重要农产品有效供给
+      1. 保障重要农产品 *有效供给* 始终是三农工作的头等大事
+***** 加强党对三农工作的全面领导
+      1. 加强党对三农工作的全面领导，坚持 *农业农村* 优先发展（总方针），五级书记（省市县乡村）抓振醒责任，发挥好 *农村基层党组织* 的战斗堡垒作用
+      2. 土地承包关系顺延 *30年*
+** 重要讲话
+** 时事政治
